dons de classe 10

--- a/data/feats/class-10-VJl2xHDKr0HxTUrs.htm
+++ b/data/feats/class-10-VJl2xHDKr0HxTUrs.htm
@@ -2,12 +2,11 @@ Name: Symphony Of The Unfettered Heart
 Nom: Symphonie du cœur affranchi
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You learn the symphony of the unfettered heart composition spell (page 228), which enables you to protect an ally against incapacitating conditions.
-Avantage: Vous apprenez le sort de composition symphonie du cœur sans entrave (page 228), qui vous permet de protéger un allié contre les conditions incapacitantes.
+Avantage: Vous obtenez le sort de composition Symphonie du cœur affranchi.
 
 ------ Description (en) ------
 <p>You learn the @Compendium[pf2e.spells-srd.ZAX0OOcKtYMQlquR]{Symphony of the Unfettered Heart} composition spell, which enables you to protect an ally against incapacitating conditions.</p>
