--- a/data/feats/class-10-uotQ9yqetPoAWrfW.htm
+++ b/data/feats/class-10-uotQ9yqetPoAWrfW.htm
@@ -1,17 +1,14 @@
 Name: Reflexive Riposte
 Nom: Riposte machinale
 PrereqEN: Opportune Riposte
-PrereqFR: 
-État: changé
-État d'origine: libre
+PrereqFR: Riposte opportune
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You can riposte almost without a thought.
-Avantage: Vous pouvez riposter presque sans réfléchir.
+Avantage: Vous obtenez une réaction supplémentaire pour effectuer une Riposte opportune.
 
 ------ Description (en) ------
 <p>You can riposte almost without a thought. At the start of each of your turns when you regain your actions, you gain an additional reaction that can be used only to perform an Opportune Riposte.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> <a class="entity-link" data-pack="pf2e.classfeatures" data-id="Jtn7IugykXDlIoZq" draggable="true"><i class="fas fa-suitcase"></i>Riposte opportune</a></p>
-<hr>
 <p>Vous pouvez riposter presque sans y penser. Au début de chacun de vos tours, lorsque vous regagnez vos actions, vous obtenez une réaction supplémentaire qui ne peut être utilisée que pour accomplir une Riposte opportune.</p>
