--- a/data/feats/class-10-U52NMdeSNbjSSRHE.htm
+++ b/data/feats/class-10-U52NMdeSNbjSSRHE.htm
@@ -1,18 +1,14 @@
 Name: Incredible Companion (Ranger)
 Nom: Formidable compagnon (Rôdeur)
 PrereqEN: |Mature Animal Companion
-PrereqFR: 
-État: changé
-État d'origine: officielle
+PrereqFR: Compagnon animal adulte
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: Your animal companion continues to grow and develop.
-Avantage: Votre compagnon animal continue de grandir et de se développer.
------- Benefits and spoiler ----
-Avantage: Votre compagnon animal continue de grandir et de se développer.
+Avantage: Votre compagnon animal devient sauvage ou agile.
+
 ------ Description (en) ------
 <p>Your animal companion continues to grow and develop. It becomes a nimble or savage animal companion (your choice), gaining additional capabilities determined by the type of companion.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> Compagnon animal adulte</p>
-<hr>
-<p>Votre compagnon animal continue de grandir et de se développer. Il devient un compagnon animal sauvage ou agile (vous choisissez), ce qui lui confère des capacités supplémentaires déterminées par le type de compagnon (page 214).</p>
+<p>Votre compagnon animal continue de grandir et de se développer. Il devient un compagnon animal sauvage ou agile (vous choisissez), ce qui lui confère des capacités supplémentaires déterminées par le type de compagnon.</p>
