--- a/data/feats/class-10-UjYHf7rlWTFJ0v0A.htm
+++ b/data/feats/class-10-UjYHf7rlWTFJ0v0A.htm
@@ -2,8 +2,7 @@ Name: Signature Spell Expansion
 Nom: Expansion des sorts emblématiques
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: Your innate connection to magic lets you cast more spells with greater freedom.
@@ -12,4 +11,4 @@ Avantage: Votre lien inné avec la magie vous permet de lancer plus de sorts ave
 ------ Description (en) ------
 <p>Your innate connection to magic lets you cast more spells with greater freedom. You gain two additional signature spells, each of which must have a minimum level of 3rd or lower.</p>
 ------ Description (fr) ------
-<p>Votre lien inné à la magie vous permet de lancer plus de sorts avec une plus grande liberté. Vous ajoutez deux sorts emblématiques supplémentaires, dont chacun doit avoir un niveau minimum de 3 ou moins.</p>
+<p>Votre lien inné à la magie vous permet de lancer plus de sorts avec une plus grande liberté. Vous ajoutez deux sorts emblématiques supplémentaires dont chacun doit être au niveau minimum de 3 ou inférieur.</p>
