--- a/data/feats/class-10-W7aT1UJOVFkYdQti.htm
+++ b/data/feats/class-10-W7aT1UJOVFkYdQti.htm
@@ -1,17 +1,14 @@
 Name: Hunter's Vision
 Nom: Vision du chasseur
 PrereqEN: warden spells
-PrereqFR: 
-État: changé
-État d'origine: libre
+PrereqFR: sorts de gardien
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You are so focused on your hunted prey that you can see it clearly even beyond the limits of your senses.
-Avantage: Vous êtes tellement concentré sur la proie que vous chassez que vous pouvez la voir clairement même au-delà des limites de vos sens.
+Avantage: Vous obtenez le sort de gardien Vision du chasseur.
 
 ------ Description (en) ------
 <p>You are so focused on your hunted prey that you can see it clearly even beyond the limits of your senses. You gain the @Compendium[pf2e.spells-srd.tj86Rnq3QuQnDtG3]{Hunter's Vision} warden spell. Increase the number of Focus Points in your focus pool by 1.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> sorts de gardien</p>
-<hr>
-<p>Vous êtes si concentré sur votre proie que vous pouvez la voir clairement même au-delà des limites de vos sens. Vous obtenez le sort de gardien <a class="entity-link" data-pack="pf2e.spells-srd" data-id="tj86Rnq3QuQnDtG3" draggable="true"><i class="fas fa-suitcase"></i>Vision du chasseur</a>. Augmentez le nombre de points de focalisation de votre réserve de focalisation de 1.</p>
+<p>Vous êtes si concentré sur votre proie que vous pouvez la voir clairement même au-delà des limites de vos sens. Vous obtenez le sort de gardien @Compendium[pf2e.spells-srd.tj86Rnq3QuQnDtG3]{Vision du chasseur}. Augmentez le nombre de points de focalisation de votre réserve de focalisation de 1.</p>
