--- a/data/feats/class-10-w3qyriA1YnzXaas3.htm
+++ b/data/feats/class-10-w3qyriA1YnzXaas3.htm
@@ -1,17 +1,14 @@
 Name: Shield Of Faith
 Nom: Bouclier de la foi
 PrereqEN: Domain Initiate
-PrereqFR: 
-État: changé
-État d'origine: libre
+PrereqFR: Initié du domaine
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: Residual energy from your domain spells bolsters your defenses.
-Avantage: L'énergie résiduelle de vos sorts de domaine renforce vos défenses.
+Avantage: En lançant un sort de domaine, vous obtenez un bonus de statut de +1 à la CA.
 
 ------ Description (en) ------
 <p>Residual energy from your domain spells bolsters your defenses. When you spend a Focus Point to cast a domain spell, you gain a +1 status bonus to your AC until the start of your next turn.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> @Compendium[pf2e.feats-srd.hT4INKGtly4QY8KN]{Initié du domaine}</p>
-<hr>
 <p>L'énergie résiduelle de vos sorts de domaine renforce vos défenses. Lorsque vous dépensez un Point de Focalisation pour lancer un sort de domaine, vous obtenez un bonus de statut de +1 à votre CA jusqu'au début de votre prochain tour.</p>
