--- a/data/feats/class-10-wIJC00ODLq9WYc1m.htm
+++ b/data/feats/class-10-wIJC00ODLq9WYc1m.htm
@@ -1,19 +1,17 @@
 Name: Shared Avoidance
 Nom: Évitement partagé
 PrereqEN: Premonition of Avoidance
-PrereqFR: 
-État: changé
-État d'origine: libre
+PrereqFR: Évitement prémonitoire
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You can project your premonitions of danger to your allies.
-Avantage: Vous pouvez projeter vos prémonitions de danger à vos alliés.
+Avantage: Évitement prémonitoire profite à vos alliés dans les 4,5 m.
 
 ------ Description (en) ------
 <p>You can project your premonitions of danger to your allies.</p>
 <p>When you use @Compendium[pf2e.feats-srd.KYl1rWFOHe0e6VqJ]{Premonition Of Avoidance}, allies within 15 feet of you who are rolling the same saving throw against the same hazard also gain a +2 circumstance bonus to their saving throws.</p>
 <p>@Compendium[pf2e.feat-effects.svVczVV174KfJRDf]{Effect: Shared Avoidance}</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> <a class="entity-link" data-pack="pf2e.feats-srd" data-id="KYl1rWFOHe0e6VqJ" draggable="true"><i class="fas fa-suitcase"></i>Évitement prémonitoire</a></p>
-<hr>
-<p>Vous pouvez projeter votre prémonition du danger à vos alliés. Lorsque vous utilisez Évitement prémonitoire, vos alliés à 4,5 m de vous qui lance le même jet de sauvegrde contre le même danger obtiennent aussi le bonus de circonstances de +2 à leur jet de sauvegarde.</p>
+<p>Vous pouvez projeter votre prémonition du danger à vos alliés. Lorsque vous utilisez @Compendium[pf2e.feats-srd.KYl1rWFOHe0e6VqJ]{Évitement prémonitoire}, vos alliés à 4,5 m de vous qui lance le même jet de sauvegarde contre le même danger obtiennent aussi le bonus de circonstances de +2 à leur jet de sauvegarde.</p>
+<p>@Compendium[pf2e.feat-effects.svVczVV174KfJRDf]{Effet: Évitement partagé}</p>
