--- a/data/equipment/consumable-02-HHELOoN5GVonUiIa.htm
+++ b/data/equipment/consumable-02-HHELOoN5GVonUiIa.htm
@@ -1,7 +1,6 @@
 Name: Crying Angel Pendant
 Nom: Pendentif de l'ange en pleurs
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">F</span> Envision</p>
@@ -9,6 +8,7 @@ Nom: Pendentif de l'ange en pleurs
 <p><strong>Requirements</strong> You are trained in Medicine</p>
 <p>When you activate this alabaster pendant, your critical failure becomes a normal failure instead.</p>
 ------ Description (fr) ------
-<p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">F</span> Imaginer</p>
-<p>Lorsque vous activez ce pendentif d’albâtre, votre échec critique se mue en échec normal.<br></p>
-<p><strong>Déclencheur</strong> Vous faites un échec critique en @Compendium[pf2e.actionspf2e.MHLuKy4nQO2Z4Am1]{Prodiguer les premiers soins} ;  <strong>Conditions</strong> Vous êtes qualifié en Médecine. </p>
+<p><strong>Activation</strong> <span class="pf2-icon">F</span> Imaginer</p>
+<p>Lorsque vous activez ce pendentif d’albâtre, votre échec critique se mue en échec normal.</p>
+<p><strong>Déclencheur</strong> Vous faites un échec critique en @Compendium[pf2e.actionspf2e.MHLuKy4nQO2Z4Am1]{Prodiguer les premiers soins} ;  </p>
+<p><strong>Conditions</strong> Vous êtes qualifié en Médecine. </p>
