dons de classe 10 révisés (fin)

--- a/data/feats/class-10-Xdmz09kzLjIxWz9C.htm
+++ b/data/feats/class-10-Xdmz09kzLjIxWz9C.htm
@@ -1,13 +1,12 @@
 Name: Tactical Debilitations
 Nom: Handicaps tactiques
 PrereqEN: scoundrel racket|Debilitating Strike
-PrereqFR: 
-État: changé
-État d'origine: officielle
+PrereqFR: trafic de scélérat|Frappe incapacitante
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You learn new debilitations that grant you tactical advantages against your foes.
-Avantage: Vous apprenez de nouvelles débilitations qui vous donnent des avantages tactiques contre vos ennemis.
+Avantage: La cible de votre Frappe incapacitante ne peut faire de réaction ou ne peut prendre en tenaille.
 
 ------ Description (en) ------
 <p>You learn new debilitations that grant you tactical advantages against your foes. Add the following debilitations to the list you can choose from when you use Debilitating Strike.</p>
@@ -16,10 +15,8 @@ Avantage: Vous apprenez de nouvelles débilitations qui vous donnent des avantag
 <li><strong>Debilitation</strong> The target can't flank or contribute to allies' flanking.</li>
 </ul>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> trafic de scélérat, Frappe incapacitante</p>
-<hr>
-<p>Vous apprenez de nouveaux handicaps qui vous confèrent des avantages tactiques contre vos ennemis. Ajoutez les handicaps suivants à la liste de handicaps que vous utilisez avec Frappe incapacitante.&nbsp;</p>
+<p>Vous apprenez de nouveaux handicaps qui vous confèrent des avantages tactiques contre vos ennemis. Ajoutez les handicaps suivants à la liste de handicaps que vous utilisez avec Frappe incapacitante.</p>
 <ul>
-<li><strong>Handicap</strong> La cible ne peut pas utiliser de réactions.</li>
+<li><strong>Handicap</strong> La cible ne peut pas utiliser de réaction.</li>
 <li><strong>Handicap</strong> La cible ne peut pas prendre en tenaille ou contribuer à la prise en tenaille de ses alliés.</li>
 </ul>
