--- a/data/feats/class-10-Xw7qG0SHepXx24vl.htm
+++ b/data/feats/class-10-Xw7qG0SHepXx24vl.htm
@@ -1,15 +1,13 @@
 Name: Prevailing Position
 Nom: Position prédominante
 PrereqEN: |at least one stance feat
-PrereqFR: 
-État: changé
-État d'origine: libre
+PrereqFR: au moins un don de Posture
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: Your willingness to flow from one stance to another lets you sacrifice their benefits to better protect yourself.
-Avantage: Votre volonté de passer d'une position à une autre vous permet de sacrifier leurs avantages pour mieux vous protéger.
------- Benefits and spoiler ----
-Avantage: Votre volonté de passer d'une position à une autre vous permet de sacrifier leurs avantages pour mieux vous protéger.
+Avantage: Vous obtenez un bonus de +4 à votre CA ou à votre jet de Réflexes en abandonnant votre posture.
+
 ------ Description (en) ------
 <p><strong>Trigger</strong> You are targeted by an attack or attempt a Reflex saving throw against a damaging effect, and you are in a stance.</p>
 <hr />
@@ -17,7 +15,7 @@ Avantage: Votre volonté de passer d'une position à une autre vous permet de sa
 <p>You leave the stance you were in, gaining a +4 circumstance bonus to the triggering saving throw or to your AC against the triggering attack.</p>
 <p>@Compendium[pf2e.feat-effects.COsdMolZraFRTdP8]{Feat Effect: Prevailing Position}</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> au moins un don de Posture</p>
-<p><strong>Déclencheur</strong> Vous êtes cible par une attaque ou effectuez un jet de Réflexes contre un effet infligeant des dégâts et vous êtes dans une posture.</p>
-<hr>
-<p>La rapidité à vous couler d'une posture à une autre vous a appris à sacrifier leurs avantages pour mieux vous protéger vous-même. Vous quittez la posture dans laquelle vous vous trouviez, en gagnant un bonus de circonstances de +4 au jet de protection déclencheur ou à votre CA contre l'attaque déclencheuse.</p>
+<p><strong>Déclencheur</strong> Vous êtes ciblé par une attaque ou effectuez un jet de Réflexes contre un effet infligeant des dégâts et vous êtes dans une posture.</p>
+<hr />
+<p>La rapidité à vous couler d'une posture à une autre vous a appris à sacrifier leurs avantages pour mieux vous protéger vous-même. Vous quittez la posture dans laquelle vous vous trouviez, en obtenant un bonus de circonstances de +4 au jet de sauvegarde déclencheur ou à votre CA contre l'attaque déclencheuse.</p>
+<p>@Compendium[pf2e.feat-effects.COsdMolZraFRTdP8]{Effet : Position prédominante}</p>
