--- a/data/feats/class-10-YNk0BekymS3bBvCT.htm
+++ b/data/feats/class-10-YNk0BekymS3bBvCT.htm
@@ -6,9 +6,9 @@ PrereqFR: Magie du sang ancestral
 
 ------ Benefits and spoiler ----
 Benefits: The magic of your ancestry and bloodline are one and the same.
-Avantage: La magie de vos ancêtres et de votre lignée sont une seule et même chose.
+Avantage: Tous les sorts innés issus de votre ascendance ou d'un don ancestral figurent dans votre répertoire.
 
 ------ Description (en) ------
 <p>The magic of your ancestry and bloodline are one and the same. Add any innate spells you have from a heritage or an ancestry feat to your spell repertoire, meaning you can cast them using your spell slots.</p>
 ------ Description (fr) ------
-<p>La magie de vos ancêtres et de votre lignage ne font qu'une. Ajoutez tous les sorts innés issu d'une acsendance ou d'un don ancestral à votre répertoire de sort, ce qui vous permet de les lancer en utilisant vos emplacements de sort.</p>
+<p>La magie de vos ancêtres et de votre lignage ne font qu'une. Ajoutez tous les sorts innés issus de votre ascendance ou d'un don ancestral à votre répertoire de sorts, ce qui vous permet de les lancer en utilisant vos emplacements de sort.</p>
