--- a/data/feats/class-10-YluQPhevo0LKdF1p.htm
+++ b/data/feats/class-10-YluQPhevo0LKdF1p.htm
@@ -2,12 +2,11 @@ Name: Just One More Thing
 Nom: Encore une chose
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: After your attempt to influence someone goes poorly, you add another bit of information or ask a pointed question, possibly salvaging your previous attempt.
-Avantage: Lorsque votre tentative d'influencer quelqu'un échoue, vous ajoutez un autre élément d'information ou posez une question pertinente, afin de sauver votre tentative précédente.
+Avantage: Vous pouvez relancer un test échoué pour Feinter, Solliciter, Démoraliser ou pour Mentir, Recueillir des Informations, Faire bonne Impression ou Contraindre.
 
 ------ Description (en) ------
 <p><strong>Requirements</strong> Your most recent action was to Feint, Request, or Demoralize, and you failed but didn't critically fail.</p>
@@ -16,8 +15,8 @@ Avantage: Lorsque votre tentative d'influencer quelqu'un échoue, vous ajoutez u
 <p>Reroll the failed check and use the new result. If the target of the failed check is the subject of a lead you're pursuing, double your bonus from @Compendium[pf2e.actionspf2e.xTK2zsWFyxSJvYbX]{Pursue a Lead} on the rerolled check. That creature is temporarily immune to Just One More Thing for 1 day.</p>
 <p>You can also use this action if you failed, but didn't critically fail, at a check to Lie, Gather Information, Make an Impression, or Coerce. In this case, rather than spending 1 action, adding Just One More Thing takes you half the amount of time you initially spent on the check, to a minimum of 1 more round.</p>
 ------ Description (fr) ------
-<p><strong>Conditions</strong> Voter plus récente action était de @Compendium[pf2e.actionspf2e.QNAVeNKtHA0EUw4X]{Feinter}, @Compendium[pf2e.actionspf2e.DCb62iCBrJXy0Ik6]{Solliciter} ou de @Compendium[pf2e.actionspf2e.2u915NdUyQan6uKF]{Démoraliser} et vous avez échoué mais pas de manière critique.</p>
-<hr>
-<p>Après votre tenttative d'influencer quelqu'un sans y parvenir vous joutez une autre information ou poser une question pertinente, en sauvant potentiellement votre précédente tentative.</p>
+<p><strong>Conditions</strong> Votre plus récente action était de @Compendium[pf2e.actionspf2e.QNAVeNKtHA0EUw4X]{Feinter}, @Compendium[pf2e.actionspf2e.DCb62iCBrJXy0Ik6]{Solliciter} ou de @Compendium[pf2e.actionspf2e.2u915NdUyQan6uKF]{Démoraliser} et vous avez échoué mais pas de manière critique.</p>
+<hr />
+<p>Après votre tentative d'influencer quelqu'un sans y parvenir vous ajoutez une autre information ou vous posez une question pertinente, en rattrapant potentiellement votre précédente tentative.</p>
 <p>Relancez le test échoué et utilisez le nouveau résultat. Si la cible du test manqué est le sujet d'une piste que vous suivez, doublez votre bonus provenant de @Compendium[pf2e.actionspf2e.xTK2zsWFyxSJvYbX]{Suivre une piste} sur le test relancé. Cette créature est temporairement immunisée à Encore une chose pendant une journée.</p>
-<p>Vous pouvez aussi utiliser cette action si vous avez obtenu un échec mais pas un échec critique sur un test pour @Compendium[pf2e.actionspf2e.ewwCglB7XOPLUz72]{Mentir}, @Compendium[pf2e.actionspf2e.plBGdZhqq5JBl1D8]{Recueillir des Informations}, @Compendium[pf2e.actionspf2e.OX4fy22hQgUHDr0q]{Faire bonne Impression} ou pour @Compendium[pf2e.actionspf2e.tHCqgwjtQtzNqVvd]{Contraindre}. Dans ce cas, plutôt que de dépenser 1 action, en ajoutant Encore rune chose, cela vous prend la moitié du temps initialement dépensé pour le test échoué, avec un minimum un round de plus.</p>
+<p>Vous pouvez aussi utiliser cette action si vous avez obtenu un échec mais pas un échec critique sur un test pour @Compendium[pf2e.actionspf2e.ewwCglB7XOPLUz72]{Mentir}, @Compendium[pf2e.actionspf2e.plBGdZhqq5JBl1D8]{Recueillir des Informations}, @Compendium[pf2e.actionspf2e.OX4fy22hQgUHDr0q]{Faire bonne Impression} ou pour @Compendium[pf2e.actionspf2e.tHCqgwjtQtzNqVvd]{Contraindre}. Dans ce cas, plutôt que de dépenser une action en ajoutant Encore rune chose, cela vous prend la moitié du temps initialement dépensé pour le test échoué, avec un minimum de un round supplémentaire.</p>
