--- a/data/feats/class-10-wvJBIzgS298ZRp6w.htm
+++ b/data/feats/class-10-wvJBIzgS298ZRp6w.htm
@@ -1,13 +1,12 @@
 Name: Precise Debilitations
 Nom: Handicaps précis
 PrereqEN: thief racket|Debilitating Strike
-PrereqFR: 
-État: changé
-État d'origine: officielle
+PrereqFR: trafic de voleur|Frappe incapacitante
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You carefully aim and gracefully deliver your debilitations.
-Avantage: Vous visez soigneusement et délivrez gracieusement vos débilités.
+Avantage: La cible de votre Frappe incapacitante subit 2d6 dégâts de précision supplémentaires ou est Prise au dépourvu.
 
 ------ Description (en) ------
 <p>You carefully aim and gracefully deliver your debilitations. Add the following debilitations to the list you can choose from when you use Debilitating Strike.</p>
@@ -16,10 +15,8 @@ Avantage: Vous visez soigneusement et délivrez gracieusement vos débilités.
 <li><strong>Debilitation:</strong> The target becomes flat-footed.</li>
 </ul>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> trafic de voleur, Frappe incapacitante</p>
-<hr>
 <p>Vous visez avec soin avant de distribuer gracieusement vos handicaps. Ajoutez les handicaps suivants à la liste de handicaps que vous utilisez avec Frappe incapacitante.</p>
 <ul>
-<li><strong>Handicap:</strong> Vos attaques infligent 2d6 dégâts de précision supplémentaires à la cible.</li>
-<li><strong>Handicap:</strong>  La cible devient @Compendium[pf2e.conditionitems.AJh5ex99aV6VTggg]{prise au dépourvu}.</li>
+<li><strong>Handicap</strong> Vos attaques infligent 2d6 dégâts de précision supplémentaires à la cible.</li>
+<li><strong>Handicap</strong>  La cible est @Compendium[pf2e.conditionitems.AJh5ex99aV6VTggg]{Prise au dépourvu}.</li>
 </ul>
