--- a/data/feats/class-10-xQuNswWB3eg1UM28.htm
+++ b/data/feats/class-10-xQuNswWB3eg1UM28.htm
@@ -1,15 +1,13 @@
 Name: Cobra Envenom
-Nom: Posture du cobra
+Nom: Venin du cobra
 PrereqEN: |Cobra Stance|expert in unarmed attacks
-PrereqFR: 
-État: changé
-État d'origine: libre
+PrereqFR: Posture du cobra|expert en attaques à mains nues
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You lash out with devious intent and the power to envenom your foe.
-Avantage: Vous vous élancez avec des intentions sournoises et le pouvoir d'envenimer votre ennemi.
------- Benefits and spoiler ----
-Avantage: Vous vous élancez avec des intentions sournoises et le pouvoir d'envenimer votre ennemi.
+Avantage: Vous infligez des dégâts persistants de poison.
+
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per minute</p>
 <p><strong>Requirements</strong> You are in @Compendium[pf2e.feats-srd.AkV4Jyllo6nlK2Sl]{Cobra Stance}.</p>
@@ -20,9 +18,10 @@ Avantage: Vous vous élancez avec des intentions sournoises et le pouvoir d'enve
 <p><strong>Special</strong> If you have this feat, the circumstance bonus to Fortitude saves and Fortitude DC granted by Cobra Stance increases from +1 to +2.</p>
 <p>@Compendium[pf2e.feat-effects.2Qpt0CHuOMeL48rN]{Stance: Cobra Stance (Cobra Envenom)}</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> <a class="entity-link" data-pack="pf2e.feats-srd" data-id="AkV4Jyllo6nlK2Sl" draggable="true"><i class="fas fa-suitcase"></i>Posture du cobra</a>, expert en attaques à mains nues</p>
 <p><strong>Fréquence</strong> une fois par minute</p>
-<p><strong>Conditions</strong> Vous êtes dans la Posture du cobra.</p>
+<p><strong>Conditions</strong> Vous êtes dans la @Compendium[pf2e.feats-srd.AkV4Jyllo6nlK2Sl]{Posture du cobra}.</p>
 <hr>
-<p>Vous vous déchainez avec une intention sournoise et le pouvoir d'envenimer votre ennemi. Faites une <a class="entity-link" data-pack="pf2e.actionspf2e" data-id="VjxZFuUXrCU94MWR" draggable="true"><i class="fas fa-suitcase"></i> Frappe</a> de crochets du cobra. Votre allonge avec cette frappe est de 1,5 m de plus que la normale. Si cette Frappe touche, la cible subit <a class="inline-roll roll" data-mode="roll" data-flavor="persistent poison" data-formula="1d4" title="persistent poison"><i class="fas fa-dice-d20"></i>1d4</a> dégâts de poisons persistants par dé de dégât de l'arme.</p>
-<p><strong>Spécial</strong> Si vous avez ce don, le bonus de circonstance aux jets de Vigueur et le DD des jets de Vigueur de Posture du cobra passe de +1 à +2.</p>
+<p>Vous vous déchainez avec une intention sournoise et le pouvoir d'empoisonner votre ennemi. Faites une Frappe de crochets du cobra. Votre allonge avec cette frappe est de 1,5 m de plus que la normale. Si cette Frappe touche, la cible subit [[/r 1d4 #dégâts de poison persistants]] dégâts de poison persistants par dé de dégâts de l'arme.</p>
+<hr />
+<p><strong>Spécial</strong> Si vous avez ce don, le bonus de circonstances aux jets de Vigueur et le DD des jets de Vigueur de Posture du cobra passe de +1 à +2.</p>
+<p>@Compendium[pf2e.feat-effects.2Qpt0CHuOMeL48rN]{Posture : Posture du cobra (Venin du cobra)}</p>
