--- a/data/feats/class-10-z2ptq23nNBOeEI7H.htm
+++ b/data/feats/class-10-z2ptq23nNBOeEI7H.htm
@@ -2,14 +2,12 @@ Name: Quickened Casting
 Nom: Incantation accélérée
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You are able to quickly cast a spell.
-Avantage: Vous êtes capable de lancer rapidement un sort.
------- Benefits and spoiler ----
-Avantage: Vous êtes capable de lancer rapidement un sort.
+Avantage: Une fois par jour, vous réduisez de 1 le nombre d'action nécessaire au lancement d'un sort.
+
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day</p>
 <hr />
@@ -17,4 +15,4 @@ Avantage: Vous êtes capable de lancer rapidement un sort.
 ------ Description (fr) ------
 <p><strong>Fréquence</strong>une fois par jour</p>
 <hr>
-<p>Si votre prochaine action consiste à lancer un tour de magie de barde ou un sort de barde d’au minimum deux niveaux de moins que le sort de plus haut niveau que vous pouvez lancer, réduisez le nombre d’actions nécessaire à son incantation de 1 (1 action au minimum).</p>
+<p>Si votre prochaine action consiste à lancer un tour de magie ou un sort d’au minimum deux niveaux de moins que le sort de plus haut niveau que vous pouvez lancer, réduisez le nombre d’actions nécessaire à son incantation de 1 (1 action au minimum).</p>
