--- a/data/feats/class-10-YV4X9u5Yuf0xvoCh.htm
+++ b/data/feats/class-10-YV4X9u5Yuf0xvoCh.htm
@@ -2,12 +2,11 @@ Name: Surging Might
 Nom: Puissance déferlante
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: With a complex gesture, you focus the divine power of your spell to overcome enemies' resistances.
-Avantage: D'un geste complexe, vous concentrez la puissance divine de votre sort pour vaincre les résistances de vos ennemis.
+Avantage: votre sort infligeant des dégâts d'alignement franchit la résistance de la cible.
 
 ------ Description (en) ------
 <p>With a complex gesture, you focus the divine power of your spell to overcome enemies' resistances. If the next action you use is to Cast a Spell, the spell ignores an amount of the target's resistance equal to your level against all the following types of damage: chaotic, evil, good, lawful, negative, and positive.</p>
