--- a/data/feats/class-10-Yk3QGpalWDn5MhBV.htm
+++ b/data/feats/class-10-Yk3QGpalWDn5MhBV.htm
@@ -2,12 +2,11 @@ Name: Silencing Strike
 Nom: Frappe muselante
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: A quick strike to the face or mouth silences your opponent.
-Avantage: Une frappe rapide au visage ou à la bouche fait taire votre adversaire.
+Avantage: Votre Frappe étourdit votre cible et l'empêche de parler. 
 
 ------ Description (en) ------
 <p>A quick strike to the face or mouth silences your opponent. Make a melee @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Strike} against a foe. The foe must succeed at a Fortitude save against your class DC.</p>
@@ -16,8 +15,8 @@ Avantage: Une frappe rapide au visage ou à la bouche fait taire votre adversair
 <p><strong>Failure</strong> The target is dazed and can barely vocalize. It's @Compendium[pf2e.conditionitems.dfCMdR4wnpbYNTix]{Stunned} 1 and its speech is raspy and hard to understand. It must succeed at a DC 11 flat check to use linguistic actions or supply verbal spellcasting components until the end of its next turn.</p>
 <p><strong>Critical Failure</strong> As failure, but the creature is stunned 3 instead of stunned 1.</p>
 ------ Description (fr) ------
-<p>Une frappe rapide au visage opu à la bouche réduit au silence votre adversaire. Faites une @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Frappe} de mêlée contre un ennemi. L'ennemi doit réussir un jet de Vigueurcontre votre DD de classe.</p>
+<p>Une frappe rapide au visage ou à la bouche réduit au silence votre adversaire. Faites une @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Frappe} de mêlée contre un ennemi. L'ennemi doit réussir un jet de Vigueur contre votre DD de classe.</p>
 <hr>
-<p><strong>Réussite</strong> La cible n'est pas affectée.</p>
-<p><strong>Échec</strong> La cible est hébétée et peut difficilement vocaliser. Elle est @Compendium[pf2e.conditionitems.dfCMdR4wnpbYNTix]{Assommée} 1 et sa voix est rauque et son discours difficile à comprendre. Elle doit réussir un test nu contre un DD18 pour utiliser des actions linguistiques ou fournir des composantes de sort verbales jusqu'à la fin de son prochain tour.</p>
-<p><strong>Échec critique</strong> Comme l'échec, mais la créature est assommée 3 au lieu d'assommée 1.</p>
+<p><strong>Succès</strong> La cible n'est pas affectée.</p>
+<p><strong>Échec</strong> La cible est étourdie et peut à peine parler. Elle est @Compendium[pf2e.conditionitems.dfCMdR4wnpbYNTix]{Étourdie} 1 et sa voix est rauque et son discours difficile à comprendre. Elle doit réussir un test nu contre un DD18 pour utiliser des actions linguistiques ou fournir des composantes de sort verbales jusqu'à la fin de son prochain tour.</p>
+<p><strong>Échec critique</strong> Comme l'échec, mais la créature est Étourdie 3 au lieu d'Étourdie 1.</p>
