--- a/data/feats/class-10-yTh9QwAf0hadP91j.htm
+++ b/data/feats/class-10-yTh9QwAf0hadP91j.htm
@@ -1,19 +1,18 @@
 Name: Improved Knockdown
 Nom: Renversement amélioré
 PrereqEN: Knockdown
-PrereqFR: 
-État: changé
-État d'origine: officielle
+PrereqFR: Renversement
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You can dash your foe to the ground with a single blow.
-Avantage: Vous pouvez projeter votre ennemi au sol d'un seul coup.
+Avantage: Votre Frappe suffit à renverser votre adversaire.
 
 ------ Description (en) ------
 <p>You can dash your foe to the ground with a single blow.</p>
 <p>When you use @Compendium[pf2e.feats-srd.39CqlOzlHjEhh0E4]{Knockdown}, instead of making a Strike followed by a @Compendium[pf2e.actionspf2e.ge56Lu1xXVFYUnLP]{Trip}, you can attempt a single Strike. If you do and your Strike hits, you also apply the critical success effect of a Trip.</p>
 <p>If you used a two-handed melee weapon for the Strike, you can use the weapon's damage die size instead of the regular die size for the damage from a critical Trip.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> Renversement</p>
-<hr>
-<p>Vous pouvez vous jeter contre votre adversaire et le renverser d’un seul coup. Quand vous utilisez Renversement, au lieu de faire une Frappe suivie d’un Croc-en-jambe, vous pouvez effectuer une seule et unique Frappe. Le cas échéant, et si votre Frappe touche, vous appliquez également l’effet de succès critique d’un Croc-en-jambe. Si vous avez utilisé une arme de corps à corps à deux mains pour Frapper, vous pouvez utiliser la taille du dé de dégâts de l’arme au lieu de celle du dé normalement utilisé pour déterminer les dégâts d’un Croc-en-jambe critique.</p>
+<p>Vous pouvez vous jeter contre votre adversaire et le renverser d’un seul coup.</p>
+<p>Quand vous utilisez @Compendium[pf2e.feats-srd.39CqlOzlHjEhh0E4]{Renversement}, au lieu de faire une Frappe suivie d’un @Compendium[pf2e.actionspf2e.ge56Lu1xXVFYUnLP]{Croc-en-jambe}, vous pouvez effectuer une seule et unique Frappe. Si vous le faites et que votre Frappe touche, vous appliquez également l’effet de succès critique d’un Croc-en-jambe.</p>
+<p>Si vous avez utilisé une arme de corps à corps à deux mains pour Frapper, vous pouvez utiliser la taille du dé de dégâts de l’arme au lieu de celle du dé normalement utilisé pour déterminer les dégâts d’un succès critique au Croc-en-jambe.</p>
