--- a/data/feats/class-10-zKL1lRcIbFblp2M2.htm
+++ b/data/feats/class-10-zKL1lRcIbFblp2M2.htm
@@ -1,17 +1,14 @@
 Name: Potent Poisoner
 Nom: Empoisonneur puissant
 PrereqEN: Powerful Alchemy
-PrereqFR: 
-État: changé
-État d'origine: libre
+PrereqFR: Alchimie puissante
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: By concentrating your poisons’ toxic components, you make them harder for victims to resist.
-Avantage: En concentrant les composants toxiques de vos poisons, vous les rendez plus difficiles à résister pour les victimes.
+Avantage: Le DD de vos poisons peut atteindre votre DD de classe.
 
 ------ Description (en) ------
 <p>By concentrating your poisons' toxic components, you make them harder for victims to resist. When you craft an alchemical item with the poison trait by any means, the DC is increased by up to 4, to a maximum of your class DC.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> @Compendium[pf2e.feats-srd.7JK2a1D3VeWDcObo]{Alchimie puissante}</p>
-<hr>
-<p>En concentrant les composants toxiques de vos poisons, vous rendez plus difficiles pour vos victimes de leur résiter. Lorsque vous Fabriquez un objet alchimique avec le trait poison quel que soit la manière, le DD iest augmenté d'un maximum de 4, jusqu'au maximum correspondant à votre DD de classe.</p>
+<p>En concentrant les composants toxiques de vos poisons, vous rendez plus difficiles pour vos victimes de leur résister. Lorsque vous Fabriquez un objet alchimique avec le trait poison quel que soit la manière, son DD est augmenté d'un maximum de 4, jusqu'au maximum correspondant à votre DD de classe.</p>
