--- a/data/equipment/consumable-01-XcD8p1o71tPohZWT.htm
+++ b/data/equipment/consumable-01-XcD8p1o71tPohZWT.htm
@@ -1,7 +1,6 @@
 Name: Signaling Snare
 Nom: Piège artisanal indicateur
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>A subtle snare used in hunting or tracking, a signaling snare often consists of carefully prepared earth, piled sand or stones, specific arrangements of vegetation, and so forth. When a creature enters a square of a signaling snare, nothing happens to the creature, but instead it causes a small, unobtrusive disruption to the terrain that allows the snare's creator or another creature who knows what to look for to determine whether a creature of the appropriate size entered the square.</p>
