--- a/data/equipment/consumable-02-I0eUrgVGl8a2ZjFc.htm
+++ b/data/equipment/consumable-02-I0eUrgVGl8a2ZjFc.htm
@@ -1,7 +1,6 @@
 Name: Boulderhead Bock
 Nom: Bock têtederoc
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">A</span> Interact</p>
@@ -9,7 +8,7 @@ Nom: Bock têtederoc
 <p>For 1 hour, you gain a +1 item bonus to saving throws against effects that would make you stunned or stupefied. However, you also become less aware of your surroundings, taking a -2 item penalty to Perception for 1 hour.</p>
 <p>@Compendium[pf2e.consumable-effects.2C1HuKDQDGFZuv7l]{Effect: Boulderhead Bock}</p>
 ------ Description (fr) ------
-<p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span> Interagir</p>
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir</p>
 <p>Personne n'est sûr de savoir si Gorm a brassé cette bière de malt lui-même, mais il semble qu'elle soit une des favorites lorsqu'il n'est pas en service en tant que leader de la faction des Grandes Archives. Cette bière donne un fort coup de punch, et même si Gorm décourage officiellement de la boire au travail, le bock têtederoc rend le buveur plus assuré et le protège des conditions qui viendraient altérer ses facultés mentales.</p>
 <p>Pendant 1 heure, vous obtenez un bonus d'objet de +1 aux jets de sauvegarde contre les effets qui vous rendraient Étourdis ou Stupéfiés. Quoi qu'il en soit, vous êtes aussi moins vigilant quant à votre environnement, vous faisant subir une pénalité d'objet de -2 à la Perception pendant 1 heure.</p>
 <p>@Compendium[pf2e.spell-effects.2C1HuKDQDGFZuv7l]{Effet: Bock têtederoc}</p>
