--- a/data/equipment/consumable-02-nXStoLxPrrP2b6WB.htm
+++ b/data/equipment/consumable-02-nXStoLxPrrP2b6WB.htm
@@ -1,7 +1,6 @@
 Name: Bronze Bull Pendant
 Nom: Pendentif de taureau de bronze
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">F</span> Envision</p>
@@ -11,9 +10,8 @@ Nom: Pendentif de taureau de bronze
 <p>When you activate the pendant, you gain a +2 status bonus to the Athletics check to Shove, and if you roll a critical failure on the check, you get a failure instead.</p>
 <p>@Compendium[pf2e.consumable-effects.Cxa7MdgMCUoMqbKm]{Effect: Bronze Bull Pendant}</p>
 ------ Description (fr) ------
-<p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">F</span> Imaginer</p>
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir</p>
 <p><strong>Déclencheur</strong> Vous faites un test d'Athlétisme pour Pousser, mais vous n'avez pas encore lancé les dés</p>
 <p><strong>Conditions</strong> Vous êtes qualifié en Athlétisme</p>
-<hr>
 <p>Ce pendentif est forgé dans un acier granuleux et représente une tête de taureau renâclant. Il faut le fixer sur l’armure sur la zone du torse ou sur une épaulière. Lorsque vous activez ce pendentif, vous gagnez un bonus de statut de +2 aux tests d’Athlétisme pour @Compendium[pf2e.actionspf2e.7blmbDrQFNfdT731]{Pousser} et, si vous obtenez un échec critique au test, il est remplacé par un simple échec.</p>
-<p>@Compendium[pf2e.spell-effects.Cxa7MdgMCUoMqbKm]{Effet : Pendentif de taureau de bronze}</p>
+<p>@Compendium[pf2e.spell-effects.Cxa7MdgMCUoMqbKm]{Effet: Pendentif de taureau de bronze}</p>
