--- a/data/equipment/consumable-02-ScclzFrjyB0YJlrb.htm
+++ b/data/equipment/consumable-02-ScclzFrjyB0YJlrb.htm
@@ -1,7 +1,6 @@
 Name: Black Adder Venom
 Nom: Venin de vipère noire
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>Adder venom is a simple but effective way to enhance a weapon.</p>
@@ -14,9 +13,10 @@ Nom: Venin de vipère noire
 <p><strong>Stage 3</strong> <a class="inline-roll roll" data-mode="roll" data-flavor="poison" data-formula="2d6" title="poison"><i class="fas fa-dice-d20"></i> 2d6</a> poison damage (1 round)</p>
 ------ Description (fr) ------
 <p>Le venin de vipère est un moyen simple, mais efficace d’améliorer une arme.</p>
-p><strong>Activatation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">D</span> Interagir (Blessure)</p>
+<hr />
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir (Blessure)</p>
 <p><strong>Jet de sauvegarde </strong>Vigueur DD 18; </p>
 <p><strong>Durée maximum</strong> 3 rounds; </p>
-<p><strong>Stade 1</strong> 1d8 dégâts de poison (1 round)</p>
-<p><strong>Stade&nbsp;2</strong>  1d10 dégâts de poison (1 round) ;</p>
-<p><strong>Stade 3</strong> 2d6 dégâts de poison (1 round)<br></span></p>
+<p><strong>Stade 1</strong> 1d8 dégâts de poison (1 round);</p>
+<p><strong>Stade 2</strong> 1d10 dégâts de poison (1 round);</p>
+<p><strong>Stade 3</strong> 2d6 dégâts de poison (1 round)</p>
