--- a/data/equipment/consumable-02-qeTWg0TWw9CwMKCO.htm
+++ b/data/equipment/consumable-02-qeTWg0TWw9CwMKCO.htm
@@ -1,12 +1,12 @@
 Name: Savior Spike
 Nom: Pointe salvatrice
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p><span>This pyramid-shaped spike is attached to an armor's chest piece. When you activate the spike, it shoots a strand of force to help you gain purchase. If you roll a success on the triggering attempt, you get a critical success instead (if you roll a critical failure, you get a failure instead). <br /></span></p>
 <p><span><strong>Activate</strong> <span class="pf2-icon">F</span> Command; <strong>Trigger</strong> You attempt to Grab an Edge but haven't rolled; <strong>Requirements</strong> You're an expert in Reflex</span></p>
 ------ Description (fr) ------
 <p>Cette pointe de forme pyramidale se fixe sur le torse d’une armure. Lorsque vous l’activez, elle envoie un rayon de force pour vous aider à trouver une prise. Si vous obtenez un succès sur la tentative déclencheur, vous obtenez à la place un succès critique (si vous obtenez un échec critique, vous obtenez à la place un échec)</p>
-<p><span><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">F</span> sur ordre </p>
-<p> <strong>Déclencheur</strong>  Vous tentez de Vous raccrocher in extremis, mais n’avez pas encore lancé le dé ;  <strong>Conditions</strong> Vous êtes expert en Réflexes. </span></p>
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Sur ordre</p>
+<p> <strong>Déclencheur</strong>  Vous tentez de Vous raccrocher in extremis, mais n’avez pas encore lancé le dé ;</p>  
+<p><strong>Conditions</strong> Vous êtes expert en Réflexes.</p>
