--- a/data/equipment/consumable-02-zM9VX3QwM81DzDUA.htm
+++ b/data/equipment/consumable-02-zM9VX3QwM81DzDUA.htm
@@ -1,14 +1,13 @@
 Name: Bravo's Brew (Lesser)
-Nom: Breuvage de bravoure (Inférieur)
-État: changé
-État d'origine: officielle
+Nom: Breuvage de bravoure (inférieur)
+État: officielle
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">A</span> Interact</p>
 <p>This flask of foaming beer grants courage. For the next hour after drinking this elixir, you gain a +1 item bonus to Will saves, or +2 when attempting Will saves against fear.</p>
 <p>@Compendium[pf2e.consumable-effects.eh7EqmDBDW30ShCu]{Effect: Bravo's Brew (Lesser)}</p>
 ------ Description (fr) ------
-<p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span> Interagir</p>
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir</p>
 <p>Cette flasque de bière mousseuse redonne du courage.</p>
 <p>Pendant une heure après l’avoir bue, vous gagnez un bonus d’objet de +1 aux jets de Volonté, et de +2 lors de jets de Volonté contre la terreur.</p>
-<p>@Compendium[pf2e.spell-effects.eh7EqmDBDW30ShCu]{Effet: Breuvage de bravoure (Inférieur)}</p>
+<p>@Compendium[pf2e.spell-effects.eh7EqmDBDW30ShCu]{Effet: Breuvage de bravoure (inférieur)}</p>
