--- a/data/equipment/consumable-15-sWPkbSlWAEAStBqD.htm
+++ b/data/equipment/consumable-15-sWPkbSlWAEAStBqD.htm
@@ -1,13 +1,12 @@
 Name: Bravo's Brew (Greater)
-Nom: Breuvage de bravoure (supérieure)
-État: changé
-État d'origine: officielle
+Nom: Breuvage de bravoure (supérieur)
+État: officielle
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">A</span> Interact</p>
 <p>This flask of foaming beer grants courage. For the next hour after drinking this elixir, you gain a +3 item bonus to Will saves, or +4 when attempting Will saves against fear. If you roll a success on a save against fear, you get a critical success instead.</p>
 <p>@Compendium[pf2e.consumable-effects.q1EhQ716bPSgJVnC]{Effect: Bravo's Brew (Greater)}</p>
 ------ Description (fr) ------
-<p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span> Interagir</p>
-Cette flasque de bière mousseuse redonne du courage. Pendant 1 heure après l’avoir bue, vous gagnez un bonus aux jets de Volonté est de +3 ou +4 Volonté contre la terreur. Si vous obtenez un succès sur un jet de sauvegarde contre un effet de terreur, il est transformé en succès critique.
-<p>@Compendium[pf2e.consumable-effects.q1EhQ716bPSgJVnC]{Effet: Breuvage de bravoure (Supérieur)}</p>
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir</p>
+<p>Cette flasque de bière mousseuse redonne du courage. Pendant 1 heure après l’avoir bue, vous gagnez un bonus aux jets de Volonté est de +3 ou +4 Volonté contre la terreur. Si vous obtenez un succès sur un jet de sauvegarde contre un effet de terreur, il est transformé en succès critique.</p>
+<p>@Compendium[pf2e.consumable-effects.q1EhQ716bPSgJVnC]{Effet: Breuvage de bravoure (supérieur)}</p>
