--- a/data/equipment/consumable-02-zo0ophqfKunJFxZN.htm
+++ b/data/equipment/consumable-02-zo0ophqfKunJFxZN.htm
@@ -1,7 +1,6 @@
 Name: Lethargy Poison
 Nom: Poison de léthargie
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>Lethargy poison is commonly used in hit-and-run tactics by drow and others who want their victims alive; the ambusher retreats until the poison sets in and the victim falls unconscious. Further exposure to lethargy poison does not require the target to attempt additional saving throws; only failing an saving throw against an ongoing exposure can progress its stage.</p>
@@ -15,10 +14,11 @@ Nom: Poison de léthargie
 <p><strong>Stage 4</strong> unconscious with no Perception check to wake up (1d4 hours).</p>
 ------ Description (fr) ------
 <p>Les drows et autres créatures désirant garder leurs victimes en vie utilisent fréquemment le poison de léthargie lors de tactiques de harcèlement, l’assaillant battant en retraite le temps que le poison agisse et que la victime tombe inconsciente. Une créature exposée de nouveau au poison de léthargie n’a pas à faire de jets de sauvegarde supplémentaires, seul un jet de sauvegarde raté contre l’effet de poison en cours fait passer au stade d’empoisonnement suivant</p>
-<p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">D</span> Interagir (Blessure)</p>
+<hr />
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir (Blessure)</p>
 <p><strong>Jet de sauvegarde</strong> Vigueur DD 18; </p>
 <p><strong>Durée maximum</strong> 4 heures; </p>
 <p><strong>Stade 1</strong> @Compendium[pf2e.conditionitems.xYTAsEpcJE1Ccni3]{Ralenti} 1 (1 round) ;  </p>
 <p><strong>Stade 2</strong>  ralenti 1 (1 minute) ;  </p>
 <p><strong>Stade 3</strong> @Compendium[pf2e.conditionitems.fBnFDH2MTzgFijKf]{Inconscient} sans test de Perception pour se réveiller (1 round)</p> 
-<p><strong>Stade 4</strong>  inconscient sans test de Perception pour se réveiller (1d4 heures).  <br></span></p>
+<p><strong>Stade 4</strong>  inconscient sans test de Perception pour se réveiller (1d4 heures).</p>
