--- a/data/equipment/consumable-11-eQDTsetadI8u8Kc0.htm
+++ b/data/equipment/consumable-11-eQDTsetadI8u8Kc0.htm
@@ -1,7 +1,6 @@
 Name: Quicksilver Mutagen (Greater)
 Nom: Mutagène vif-argent (supérieur)
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">A</span></p><hr />
@@ -11,10 +10,10 @@ Nom: Mutagène vif-argent (supérieur)
 <p><strong>Duration</strong> 1 hour.</p>
 <p>@Compendium[pf2e.consumable-effects.2Bds6d4UGQZqYSZM]{Effect: Quicksilver Mutagen (Greater)}</p>
 ------ Description (fr) ------
-<p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span>Interagir</p>
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir</p>
 <hr />
 Vous devenez fin et anguleux. Vous êtes plus rapide et plus agile, mais votre corps se fragilise.
 <p><strong>Avantage</strong> Vous gagnez un bonus aux jets +3 aux tests d’Acrobaties, de Discrétion et de Vol, aux jets de Réflexes et aux jets d’attaque à distance, et vous gagnezune Vitesse de +4,5 mètres.</p>
 <p><strong>Inconvénient</strong> Vous subissez un montant de dégâts égal au double de votre niveau. Vous ne pouvez pas récupérer les points de vie ainsi perdus tant que le mutagène fait effet. Vous subissez un malus de −2 aux jets de Vigueur.</p>
 <p><strong>Durée</strong> 1 heure</p>
-<p>@Compendium[pf2e.consumable-effects.VPtsrpbP0AE642al]{Effet: Mutagène de vif-argent (Supérieur)}</p>
+<p>@Compendium[pf2e.consumable-effects.VPtsrpbP0AE642al]{Effet: Mutagène de vif-argent (supérieur)}</p>
