--- a/data/equipment/consumable-03-n52BSbZsnx4Vmt2p.htm
+++ b/data/equipment/consumable-03-n52BSbZsnx4Vmt2p.htm
@@ -1,7 +1,6 @@
 Name: Quicksilver Mutagen (Moderate)
 Nom: Mutagène de vif-argent (modéré)
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">A</span> Interact</p>
@@ -12,10 +11,10 @@ Nom: Mutagène de vif-argent (modéré)
 <p><strong>Duration</strong> 10 minutes.</p>
 <p>@Compendium[pf2e.consumable-effects.VPtsrpbP0AE642al]{Effect: Quicksilver Mutagen (Moderate)}</p>
 ------ Description (fr) ------
-<p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span>Interagir</p>
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir</p>
 <hr />
 <p>Vous devenez fin et anguleux. Vous êtes plus rapide et plus agile, mais votre corps se fragilise. </p>
 <p><strong>Avantage</strong> Vous gagnez un bonus aux jets +2 aux tests d’Acrobaties, de Discrétion et de Vol, aux jets de Réflexes et aux jets d’attaque à distance, et vous gagnez +3m à votre vitesse.</p>
 <p><strong>Inconvénient</strong> Vous subissez un montant de dégâts égal au double de votre niveau. Vous ne pouvez pas récupérer les points de vie ainsi perdus tant que le mutagène fait effet. Vous subissez un malus de −2 aux jets de Vigueur.</p>
 <p><strong>Durée</strong> 10 minutes</p>
-<p>@Compendium[pf2e.consumable-effects.VPtsrpbP0AE642al]{Effet: Mutagène de vif-argent (Modéré)}</p>
+<p>@Compendium[pf2e.consumable-effects.VPtsrpbP0AE642al]{Effet: Mutagène de vif-argent (modéré)}</p>
