--- a/data/equipment/consumable-03-qQqAY59NgGNoy2xr.htm
+++ b/data/equipment/consumable-03-qQqAY59NgGNoy2xr.htm
@@ -1,7 +1,6 @@
 Name: Graveroot
 Nom: Racine des tombes
-État: changé
-État d'origine: officielle
+État:  officielle
 
 ------ Description (en) ------
 <p>The opaque white sap from the graveroot shrub clouds the mind.</p>
@@ -13,10 +12,11 @@ Nom: Racine des tombes
 <p><strong>Stage 2</strong> [[/r 1d12#poison]] poison damage and @Compendium[pf2e.conditionitems.e1XGnhKNSQIm5IXg]{Stupefied} 1 (1 round)</p>
 <p><strong>Stage 3</strong> [[/r 2d6#poison]] poison damage and stupefied 2 (1 round)</p>
 ------ Description (fr) ------
-<p><span>La sève d’un blanc opaque de la racine des tombes embrume l’esprit.<br></span></p>
-<p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span> Interagir</p>
-<p><span><strong>Jet de sauvegarde</strong>  Vigueur DD 19; 
-<strong>Durée maximum </strong> 4 rounds; 
-<strong>Stade 1</strong> [[/r 1d10#poison]] dégâts de poison (1 round) ;  
-<strong>Stade 2</strong> [[/r 1d12#poison]] dégâts de poison et  @Compendium[pf2e.conditionitems.e1XGnhKNSQIm5IXg]{Stupéfié} 1 (1 round) ; 
-<strong>Stade 3</strong> [[/r 2d6#poison]] dégâts de poison et stupéfié 2 (1 round)</span></p>>
+<p>La sève d’un blanc opaque de la racine des tombes embrume l’esprit.</p>
+<hr />
+<p><strong>Activation</strong> <span class="pf2-icon">D</span> Interagir (Blessure)</p>
+<p><strong>Jet de sauvegarde</strong>  Vigueur DD 19; </p>
+<p><strong>Durée maximum </strong> 4 rounds; </p>
+<p><strong>Stade 1</strong> [[/r 1d10#poison]] dégâts de poison (1 round) ;</p>  
+<p><strong>Stade 2</strong> [[/r 1d12#poison]] dégâts de poison et @Compendium[pf2e.conditionitems.e1XGnhKNSQIm5IXg]{Stupéfié} 1 (1 round);</p> 
+<p><strong>Stade 3</strong> [[/r 2d6#poison]] dégâts de poison et Stupéfié 2 (1 round)</p>
