--- a/data/equipment/consumable-03-RcQ4ZIzRK2xLf4G5.htm
+++ b/data/equipment/consumable-03-RcQ4ZIzRK2xLf4G5.htm
@@ -1,13 +1,12 @@
 Name: Sleep Arrow
 Nom: Flèche soporifique
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">A</span> Interact</p>
 <p><em>Sleep arrows</em> often have shafts of deep blue or black, and their fletching is exceptionally soft and downy. An activated <em>sleep arrow</em> deals no damage, but a living creature hit by it is subject to the effects of a @Compendium[pf2e.spells-srd.o4lRVTwSxnOOn5vl]{Sleep} spell (DC 17).</p>
 <p><strong>Craft Requirements</strong> Supply one casting of <em>sleep</em>.</p>
 ------ Description (fr) ------
-<p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span> Interagir</p>
-<p><span>Une <em>flèche soporifique </em>possède un fût bleu nuit ou noir et un empennage particulièrement doux et duveteux. Une fois activée, elle n’inflige pas de dégâts, mais si elle touche une créature, cette dernière est affectée par le sort  @Compendium[pf2e.spells-srd.o4lRVTwSxnOOn5vl]{Sommeil} (DD 17).<br></span></p>
-<p><span><strong>Conditions de fabrication.</strong> Fournir une <em>incantation de sommeil</em>.</span></p>
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir</p>
+<p>Une flèche soporifique possède un fût bleu nuit ou noir et un empennage particulièrement doux et duveteux. Une fois activée, elle n’inflige pas de dégâts, mais si elle touche une créature, cette dernière est affectée par le sort  @Compendium[pf2e.spells-srd.o4lRVTwSxnOOn5vl]{Sommeil} (DD 17).</p>
+<p><strong>Conditions de fabrication.</strong> Fournir une incantation de sommeil.</p>
