--- a/data/equipment/consumable-17-Qs8RgNH6thRPv2jt.htm
+++ b/data/equipment/consumable-17-Qs8RgNH6thRPv2jt.htm
@@ -1,16 +1,14 @@
 Name: Magic Wand (8th-Level Spell)
 Nom: Baguette magique (sort de niveau 8)
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>This baton is about a foot long and contains a single spell. The appearance typically relates to the spell within.</p>
 <p><strong>Activate</strong> Cast a Spell; <strong>Frequency</strong> once per day, plus overcharge; <strong>Effect</strong> You Cast the Spell at the indicated level.</p>
 <p><strong>Craft Requirements</strong> Supply a listed-level casting of the spell.</p>
 ------ Description (fr) ------
-<p><span>Cette baguette fait 30 cm de long environ et contient un unique sort. Son aspect physique est généralement en rapport avec le sort qu’elle contient. <br /></span></p>
-<p><span>
-<p><strong>Activation</strong> @Compendium[pf2e.actionspf2e.aBQ8ajvEBByv45yz]{Lancer un sort} 
-<p><strong>Fréquence</strong>  1/jour, plus surcharger ;  
-<p><strong>Effet</strong> Vous Lancez le sort au niveau indiqué.<br /></span></p>
-<p><span><strong>Conditions de fabrication</strong> Fournir une incantation du sort du niveau indiqué.</span></p>
+<p>Cette baguette fait 30 cm de long environ et contient un unique sort. Son aspect physique est généralement en rapport avec le sort qu’elle contient.</p>
+<p><strong>Activation</strong>  @Compendium[pf2e.actionspf2e.aBQ8ajvEBByv45yz]{Lancer un sort} </p>
+<p><strong>Fréquence</strong>  1/jour, plus surcharger ;</p>  
+<p><strong>Effet</strong> Vous Lancez le sort au niveau indiqué.</p>
+<p><strong>Conditions de fabrication</strong> Fournir une incantation du sort du niveau indiqué.</p>
