--- a/data/equipment/consumable-03-UfoaNXFA7AWZiXxI.htm
+++ b/data/equipment/consumable-03-UfoaNXFA7AWZiXxI.htm
@@ -1,7 +1,6 @@
 Name: Shiver
 Nom: Grelotte
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>A compound produced from the hallucinogenic venom of certain spiders, shiver is common in black markets. The addiction to shiver has the virulent trait.</p>
@@ -14,11 +13,10 @@ Nom: Grelotte
 <p><strong>Stage 3</strong> asleep (1 hour)</p>
 ------ Description (fr) ------
 <p>Composée à partir du venin hallucinogène de certaines araignées, la grelotte est assez fréquente au marché noir. L’addiction à la grelotte a le trait virulent.</p>
-<hr>
-<p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span> Interagir (Ingested)</p>
-<p><strong>Jet de sauvegarde</strong> Vigueur DD 19</p>
-<p><strong>Durée maximale</strong> 4 heures</p>
-<p><strong>Stade 1</strong> à chaque fois que vous êtes @Compendium[pf2e.conditionitems.TBSHQspnbcqxsmjL]{Effrayé}, réduisez l’intensité de cet état de 1 (10 min) </p>
-<p><strong>Stade 2</strong> @Compendium[pf2e.conditionitems.i3OJZU2nk64Df3xm]{Maladroit} 2 (1 heure)</p>
+<hr />
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir (Ingéré)</p>
+<p><strong>Jet de sauvegarde</strong> Vigueur DD 19;</p>
+<p><strong>Durée maximale</strong> 4 heures;</p>
+<p><strong>Stade 1</strong> à chaque fois que vous êtes @Compendium[pf2e.conditionitems.TBSHQspnbcqxsmjL]{Effrayé}, réduisez l’intensité de cet état de 1 (10 min); </p>
+<p><strong>Stade 2</strong> @Compendium[pf2e.conditionitems.i3OJZU2nk64Df3xm]{Maladroit} 2 (1 heure);</p>
 <p><strong>Stade 3</strong> endormi (1 heure)</p>
-<p></p>
