--- a/data/equipment/consumable-03-WQhnfj1LbrEzvh8z.htm
+++ b/data/equipment/consumable-03-WQhnfj1LbrEzvh8z.htm
@@ -1,7 +1,6 @@
 Name: Potion of Water Breathing
 Nom: Potion de respiration aquatique
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>This filmy, gray potion smells of an old fish midden and tastes even worse. After drinkin @Compendium[pf2e.spells-srd.MZGkMsPBztFN0pUO]{Water Breathing}water breathing spell for 1 hour.</p>
