--- a/data/equipment/consumable-04-9EZb1hmSKOGrU4Cf.htm
+++ b/data/equipment/consumable-04-9EZb1hmSKOGrU4Cf.htm
@@ -1,14 +1,13 @@
 Name: Biting Snare
 Nom: Piège artisanal à mâchoires
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>The snare's jaws shut on the leg of a creature that steps on it. The snare deals 5d6 piercing damage to the first creature that enters its square; that creature must attempt a DC 18 Reflex save.</p>
 <p><strong>Critical Success</strong> The creature is unaffected.<br /><strong>Success</strong> The creature takes half damage.<br /><strong>Failure</strong> The creature takes full damage.<br /><strong>Critical Failure</strong> The creature takes double damage and takes a -10-foot status penalty to its Speed until it recovers at least 1 Hit Point.</p>
 ------ Description (fr) ------
-<p><span>Les mâchoires de ce piège se referment sur la jambe d’une créature qui pose le pied dessus. Elles infligent 5d6 dégâts perforants à la première créature qui entre dans la case ; celle-ci doit effectuer un jet de Réflexes DD 18.&nbsp;<br></span></p>
-<p><span><strong>Succès critique</strong>; La créature n’est pas affectée.<br>
-<p><strong>Succès</strong>;La créature subit la moitié des dégâts.</p>
-<p><strong>Echec</strong>;La créature subit la totalité des dégâts.</p>
-<p><strong>Echec critique</strong>;La créature subit le double des dégâts et un malus de statut de −3 mètres à sa Vitesse jusqu’à ce qu’elle récupère au moins 1 point de vie;</span></p>
+<p>Les mâchoires de ce piège se referment sur la jambe d’une créature qui pose le pied dessus. Elles infligent 5d6 dégâts perforants à la première créature qui entre dans la case ; celle-ci doit effectuer un jet de Réflexes DD 18.</p>
+<p><strong>Succès critique</strong>; La créature n’est pas affectée.</p>
+<p><strong>Succès</strong>La créature subit la moitié des dégâts.</p>
+<p><strong>Echec</strong>La créature subit la totalité des dégâts.</p>
+<p><strong>Echec critique</strong>La créature subit le double des dégâts et un malus de statut de −3 mètres à sa Vitesse jusqu’à ce qu’elle récupère au moins 1 point de vie.</p>
