--- a/data/equipment/consumable-04-aQ4Q8Rq6ntWaHcIv.htm
+++ b/data/equipment/consumable-04-aQ4Q8Rq6ntWaHcIv.htm
@@ -1,13 +1,12 @@
 Name: Fortifying Pebble
 Nom: Caillou de fortification
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">F</span> envision</p>
 <p><strong>Trigger</strong> The affixed object would take damage</p>
 <p>This small pebble is strangely dense and surprisingly durable, affixed to an object by a sturdy steel chain. When you activate the pebble, the affixed object takes 10 less damage.</p>
 ------ Description (fr) ------
-<p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;"></span> imaginer</p>
+<p><strong>Activation</strong> <span class="pf2-icon">F</span> Imaginer</p>
 <p><strong>Déclencheur</strong>  L’objet sur lequel il est fixé subit des dégâts.</p>
 <p>Ce petit caillou étrangement dense et résistant est relié à un objet par une robuste chaîne en acier. Lorsque vous activez le caillou, l’objet auquel il est relié subit 10 dégâts de moins.</p>
