uniformisation condition conditions

--- a/data/archetypes/yvb2pY3Qb7Jl35hk.htm
+++ b/data/archetypes/yvb2pY3Qb7Jl35hk.htm
@@ -98,7 +98,7 @@ Nom: Gardien du Magaambya
 <h2>@Compendium[pf2e.feats-srd.YOU5eCD5S4cS6Qeu]{Flexibilité des Détenteurs des flots} Don 6</h2>
 <p><strong>Prérequis</strong> Dévouement de Gardien du Magaambya, affiliation aux Détenteurs des flots</p>
 <p><strong>Fréquence</strong> une fois par jour</p>
-<p><strong>Condition</strong> Vous n'avez pas encore agi à votre tour</p>
+<p><strong>Conditions</strong> Vous n'avez pas encore agi à votre tour</p>
 <hr />
 <p>Vous invoquez votre entraînement de Détenteur des Flots pour vous aider à ajuster un sort à la situation actuelle. Jusqu'à la fin de votre tour, vous obtenez un unique don de métamagie de la classe de druide ou de magicien dont la condition de niveau ne dépasse pas la moitié de votre niveau.</p>
 <h2>@Compendium[pf2e.feats-srd.V5FKAmcYQF4KRELG]{Incantation du Détenteur des flots} Don 10</h2>
