--- a/data/equipment/armor-02-IxuDS3POB6EH8TVN.htm
+++ b/data/equipment/armor-02-IxuDS3POB6EH8TVN.htm
@@ -34,7 +34,7 @@ Nom: Targe étincelante
 <p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">F</span> Imaginer;</p>
 <p><strong>Fréquence</strong> une fois par jour;</p>
 <p><strong>Déclencheur</strong> Vous feintez;</p>
-<p><strong>Condition</strong> Vous avez levé votre targe étincelante;</p>
+<p><strong>Conditions</strong> Vous avez levé votre targe étincelante;</p>
 <p><strong>Effet</strong> Lorsque vous feintez, la targe étincelante scintille puissamment. En cas de succès de la Feinte, la cible est éblouie pendant 1 round.</p>
 <hr />
 <table style="height: 32px;" border="1">
