--- a/data/equipment/equipment-12-CTiLugp5ptSItEqN.htm
+++ b/data/equipment/equipment-12-CTiLugp5ptSItEqN.htm
@@ -23,7 +23,7 @@ La plus étrange et la plus puissante des lentilles d'équilibre ressemble à un
 <hr />
 <p><strong>Activer</strong> <span class="pf2-icon">Rlt;/span> vision;</p>
 <p><strong>Fréquence</strong> une fois par jour;</p>
-<p><strong>Condition</strong> Il reste au moins une lueur dans la lentille Fulcrum d'ébène;</p>
+<p><strong>Conditions</strong> Il reste au moins une lueur dans la lentille Fulcrum d'ébène;</p>
 <p><strong>Prérequis</strong> vous avez la capacité de rajeunissement;</p>
 <p><strong>Déclencheur</strong> vous seriez détruit et êtes capable de rajeunir;</p>
 <p><strong>Effet</strong> Pendant les 24 heures qui suivent votre rajeunissement, vous gagnez un bonus d'objet de +1 aux jets d'attaque, aux jets de sauvegarde et aux DC. Réduisez de 1 le nombre de lueurs restant dans l'objectif.</p>
@@ -31,6 +31,6 @@ La plus étrange et la plus puissante des lentilles d'équilibre ressemble à un
 <hr />
 <p><strong>Activation</strong> <span class="pf2-icon">2</span> Interagir;</p>
 <p><strong>Fréquence</strong> une fois par jour;</p>
-<p><strong>Condition</strong> Il reste au moins une lueur dans la lentille Fulcrum d'ébène;</p>
+<p><strong>Conditions</strong> Il reste au moins une lueur dans la lentille Fulcrum d'ébène;</p>
 <p><strong>Effet</strong> Vous puisez dans une lueur de l'essence de Nhimbaloth pour obtenir de la puissance ; réduisez le nombre de lueurs restant dans la lentille de 1. Vous êtes @Compendium[pf2e.conditionitems.nlCjDvLMf2EkV2dl]{Quickened} pendant 1 minute et gagnez un bonus d'objet de +1 aux jets d'attaque, jets de sauvegarde et DC. Vous pouvez utiliser cette action supplémentaire pour faire de la foulée ou du pas, ou pour une action dans une capacité spéciale de fantôme que vous avez.</p>
 <p>@Compendium[pf2e.equipment-effects.u35Qzft0c84UySq2]{Effet : Lentille de Fulcrum d'ébène (2 Action)}</p>
