--- a/data/feats/ancestry-09-aOIZvx5fx5jVHHOO.htm
+++ b/data/feats/ancestry-09-aOIZvx5fx5jVHHOO.htm
@@ -16,7 +16,7 @@ Avantage: Vous traversez une autre créature pour a^^araître de l'autre côté.
 <p>To determine whether a position is valid, use the same rules as for flanking: a line through the center of the two spaces must pass through opposite sides or corners of the creature's space.</p>
 <p>You pass through the creature's life force, appearing in the selected location; this doesn't trigger reactions based on movement. You must be able to see your destination, and you can't move farther than your Speed would allow.</p>
 ------ Description (fr) ------
-<p><strong>Condition</strong> Vous devez être adjacent à une créature vivante.</p>
+<p><strong>Conditions</strong> Vous devez être adjacent à une créature vivante.</p>
 <hr />
 <p>Vous passez au travers de la case qu'une créature vivante occupe, disparaissant dans un flash et apparaissant spontanément du côté opposé d'elle accompagné par une vive explosion de lumière colorée.</p>
 <p>Vous vous déplacez de votre lieu actuel vers un autre lieu qui reste toujours adjacent à la même créature vivante, mais du côté opposé ou dans le coin opposé par rapport à la case de la créature.</p>
