--- a/data/feats/class-12-3WUL8ExEkZDRYeBu.htm
+++ b/data/feats/class-12-3WUL8ExEkZDRYeBu.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You sense magical dangers.
-Avantage: Tu sens les dangers magiques.
+Avantage: Vous tirez deux fois l'initiative si vous repérez de la magie.
 
 ------ Description (en) ------
 <p>You sense magical dangers. When using the @Compendium[pf2e.actionspf2e.Yb0C1uLzeHrVLl7a]{Detect Magic} exploration activity, you can roll initiative twice and use the better result so long as at least one opponent has a magical effect or magic item and is in range of your Detect Magic.</p>
