--- a/data/archetypes/SbvhfCo5gFVt1DgD.htm
+++ b/data/archetypes/SbvhfCo5gFVt1DgD.htm
@@ -68,7 +68,7 @@ Nom: Acrobate
 <p>Vous pouvez faire un test d'Acrobaties au lieu d'un test d'Athlétisme lorsque vous effectuez un <a class="entity-link" data-pack="pf2e.actionspf2e" data-id="2HJ4yuEFY1Cast4h" draggable="true"><i class="fas fa-suitcase"></i>Saut en Hauteur</a> ou un <a class="entity-link" data-pack="pf2e.actionspf2e" data-id="JUvAvruz7yRQXfz2" draggable="true"><i class="fas fa-suitcase"></i>Saut en longueur</a>.</p>
 <h2><a class="entity-link" draggable="true" data-pack="pf2e.feats-srd" data-id="jfsmtOx4QgXB19BL"><i class="fas fa-suitcase"></i>Frappe acrobatique</a> Don 8</h2>
 <p><strong>Prérequis</strong> Dévouement d'acrobate</p>
-<p><strong>Condition</strong> Vous êtes adjacent à un ennemi</p>
+<p><strong>Conditions</strong> Vous êtes adjacent à un ennemi</p>
 <hr>
 <p>Faites un test d'Acrobaties contre le DD de Réflexes d'un ennemi qui vous est adjacent.</p>
 <hr>
