--- a/data/archetypes/UOhVrWvuaAVtQHEo.htm
+++ b/data/archetypes/UOhVrWvuaAVtQHEo.htm
@@ -57,7 +57,7 @@ Nom: Cogneur
 <p>Vous balancez votre arme sur votre adversaire en le repoussant. Vous tentez de @Compendium[pf2e.actionspf2e.7blmbDrQFNfdT731]{Pousser} la créature déclencheuse, en ignorant la condition qui nécessite d'avoir une main libre. La créature continue son déplacement après la Poussée.</p>
 <h2>@Compendium[pf2e.feats-srd.CR9NcAIPTT4oWSEy]{Séisme du marteau} Don 14</h2>
 <p><strong>Prérequis</strong> Dévouement de Cogneur</p>
-<p><strong>Condition</strong> Vous maniez une arme au corps à corps à deux mains qui n'a pas le trait finesse</p>
+<p><strong>Conditions</strong> Vous maniez une arme au corps à corps à deux mains qui n'a pas le trait finesse</p>
 <hr>
 <p>Vous frappez le sol avec votre arme, renversant les créatures proches sur le sol.</p>
 <p>Choisissez une case à votre portée, incluant la vôtre. S'il y a un adversaire dans la case choisie, <a class="entity-link" data-pack="pf2e.actionspf2e" data-id="VjxZFuUXrCU94MWR" draggable="true">Frappez</a> cet ennemi avec l'arme requise. Puis tentez de faire un <a class="entity-link" data-pack="pf2e.actionspf2e" data-id="ge56Lu1xXVFYUnLP" draggable="true">Croc-en-jambe</a> à chaque ennemi dans la case choisie plus chaque case adjacente à cette case, en ignorant la condition du Croc-en-jambe relative au fait d'avoir une main libre. Cela compte comme trois attaques pour calculer votre pénalité d'attaque multiple, mais la pénalité n'augmente qu'après avoir porté la Frappe, si vous en faites une, ainsi qu'après toutes les tentatives de Croc-en-jambe.</p>
