--- a/data/feats/ancestry-13-KboQgBhYXI2WdCt8.htm
+++ b/data/feats/ancestry-13-KboQgBhYXI2WdCt8.htm
@@ -17,7 +17,7 @@ Avantage: Votre masque de guerre supprime la condition Effrayé mais est détrui
 <p><strong>Special</strong> You can use this reaction even if you have a condition tied to the frightened condition that would normally prevent you from using a reaction, such as “@Compendium[pf2e.conditionitems.sDPxOjQ9kx2RZE8D]{Fleeing} as long as you’re frightened” or “@Compendium[pf2e.conditionitems.6uEgoh53GbXuHpTF]{Paralyzed} as long as you’re frightened.”</p>
 ------ Description (fr) ------
 <p><strong>Déclencheur</strong> Vous débutez votre tour avec la condition @Compendium[pf2e.conditionitems.TBSHQspnbcqxsmjL]{Effrayé}.</p>
-<p><strong>Condition</strong> vous portez votre masque de guerre.</p>
+<p><strong>Conditions</strong> vous portez votre masque de guerre.</p>
 <hr />
 <p>Votre masque de guerre brûle sur votre visage, consumant votre appréhension. Vous ôtez la condition Effrayé. Votre masque de guerre est détruit et vous ne pouvez le réappliquer jusqu'à votre prochains préparatifs quotidiens.</p>
 <hr />
