--- a/data/feats/archetype-08-jfsmtOx4QgXB19BL.htm
+++ b/data/feats/archetype-08-jfsmtOx4QgXB19BL.htm
@@ -14,7 +14,7 @@ PrereqFR: Dévouement d'Acrobate
 <p><strong>F</strong><strong>ailure</strong> You remain in your original space but can still Strike.</p>
 <p><strong>Critical Failure</strong> No effect.</p>
 ------ Description (fr) ------
-<p><strong>Condition</strong> Vous êtes adjacent à un ennemi.</p>
+<p><strong>Conditions</strong> Vous êtes adjacent à un ennemi.</p>
 <hr />
 <p>Faites un test d'Acrobaties contre le DD de Réflexes d'un ennemi qui vous est adjacent.</p>
 <hr />
