--- a/data/feats/class-02-5SBFayX7JqKYANwa.htm
+++ b/data/feats/class-02-5SBFayX7JqKYANwa.htm
@@ -14,7 +14,7 @@ Avantage: Vous faites rebondir votre arme sur un ennemi pour en frapper un autre
 <p>You bounce your weapon off one foe to strike another. Make a ranged Strike with a thrown weapon. If this Strike hits, the weapon rebounds toward an enemy within 10 feet of the original target. Make an additional Strike against this second target.</p>
 <p>Both attacks count toward your multiple attack penalty, but the penalty doesn't increase until after you've made both attacks.</p>
 ------ Description (fr) ------
-<p><strong>Condition</strong> Vous maniez une arme de jet.</p>
+<p><strong>Conditions</strong> Vous maniez une arme de jet.</p>
 <hr />
 <p>Vous faites rebondir votre arme sur un ennemi pour en frapper un autre. Faites une Frappe à distance avec une arme de jet. Si ce coup est réussi, l'arme rebondit vers un ennemi situé à moins de 3 mètres de la cible initiale. Effectuez une autre Frappe contre cette deuxième cible.</p>
 <p>Les deux attaques comptent pour votre pénalité d'attaque multiple, mais la pénalité n'augmente qu'une fois que vous avez effectué les deux attaques.</p>
