--- a/data/feats/class-08-V9kShXu84NlORfcg.htm
+++ b/data/feats/class-08-V9kShXu84NlORfcg.htm
@@ -14,7 +14,7 @@ Avantage: Vous lancez vos amis sur le champ de bataille pour qu'il puisse aussit
 <p>You toss your friends around the battlefield. Pick up an adjacent ally of your size or smaller and throw them to an unoccupied space you can see within 30 feet. Their movement doesn't trigger reactions.</p>
 <p>Your ally ends this movement on their feet and doesn't take damage from the fall. If your ally ends this movement within melee reach of at least one enemy, they can make a melee @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Strike} against an enemy within their reach as a reaction.</p>
 ------ Description (fr) ------
-<p><strong>Condition</strong> vous êtes adjacent à un allié et avez au moins une main libre.</p>
+<p><strong>Conditions</strong> vous êtes adjacent à un allié et avez au moins une main libre.</p>
 <hr />
 <p>Vous lancez vos amis sur le champ de bataille. Attrapez un allié adjacent de votre taille ou de taille inférieure et lancez le dans une case inoccupée que vous pouvez voir dans les 9 m. Son déplacement ne provoque pas de réactions.</p>
 <p>Votre allié termine ce déplacement sur ses pieds et ne subit pas de dégâts de chute. Si votre allié termine son mouvement à portée d'au moins un ennemi, il peut utiliser une réaction pour faire une @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Frappe} de corps-à-corps contre un ennemi dans son allonge .</p>
