--- a/data/feats/class-12-5YcnoTYKvEtkWiHh.htm
+++ b/data/feats/class-12-5YcnoTYKvEtkWiHh.htm
@@ -1,17 +1,14 @@
 Name: Side by Side (Ranger)
 Nom: Côte à côte (Rôdeur)
 PrereqEN: an animal companion
-PrereqFR: 
-État: changé
-État d'origine: officielle
+PrereqFR: un compagnon animal
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You and your animal companion fight in tandem, distracting your foes and keeping them of balance.
-Avantage: Vous et votre compagnon animal combattez en tandem, en distrayant vos ennemis et en les déséquilibrant.
+Avantage: Vous et votre compagnon animal prenez en tenaille un ennemi adjacent.
 
 ------ Description (en) ------
 <p>You and your animal companion fight in tandem, distracting your foes and keeping them off balance. Whenever you and your animal companion are adjacent to the same foe, you are both flanking that foe with each other, regardless of your actual positions.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> un compagnon animal</p>
-<hr>
 <p>Vous et votre compagnon animal combattez en tandem, en détournant l’attention de vos adversaires et en les maintenant dans une position désavantageuse. À chaque fois que vous et votre compagnon animal êtes adjacents au même adversaire, on considère que vous le prenez tous deux en tenaille, quelles que soient vos positions.</p>
