--- a/data/feats/class-12-6DkylvU5RF1O6DTT.htm
+++ b/data/feats/class-12-6DkylvU5RF1O6DTT.htm
@@ -1,13 +1,14 @@
 Name: Daredevil's Gambit
 Nom: Manœuvre téméraire
 PrereqEN: Daring Act
-PrereqFR: 
-État: changé
-État d'origine: libre
+PrereqFR: Acte culotté
+État: libre
+
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: Acte culotté permet de rester dans l'espace de votre cible et d'en tirer bénéfice.
 
 ------ Description (en) ------
 <p>If you critically succeed at your Daring Act, you can enter the target's space and remain there until the beginning of your next turn or until the target moves, whichever comes first. You gain a +2 circumstance bonus to AC, and your target is @Compendium[pf2e.conditionitems.AJh5ex99aV6VTggg]{Flat-Footed} against your attacks while you are sharing its space in this way. If any creature other than your target hits you with an attack roll while you are sharing your target's space, attempt a DC 15 flat check. On a success, resolve the attack against the target instead of you, using the same attack roll result that hit you.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> @Compendium[pf2e.feats-srd.cny7ouhsoiNsWJ7X]{Acte culotté}</p>
-<hr>
-<p>Si le résultat de votre Acte culotté est un succès critique, vous pouvez pénétrer la case de votre adversaire et y rester jusqu'au début de votre prochain tour ou jusqu'à ce que votre adversaire se déplace, selon ce qui advient en premier. Vous obtenez un bonus de circonstances de +2 à la CA et votre cible est @Compendium[pf2e.conditionitems.AJh5ex99aV6VTggg]{Prise au dépourvue} contre vos attaques tant que vous partagez sa case de cette manière. Si une créature autre que votre cible vous touche sur un jet d'attaque alors que vous partagez la case de votre cible, faites un test nu contre un DD 15. Sur un succès, résolvez l'attaque contre votre cible au lieu de vous, en utilisant le même résultat que celui du jet d'attaque qui vous a touché.</p>
+<p>Si le résultat de votre Acte culotté est un succès critique, vous pouvez pénétrer la case de votre adversaire et y rester jusqu'au début de votre prochain tour ou jusqu'à ce que votre adversaire se déplace, selon ce qui advient en premier. Vous obtenez un bonus de circonstances de +2 à la CA et votre cible est @Compendium[pf2e.conditionitems.AJh5ex99aV6VTggg]{Prise au dépourvue} contre vos attaques tant que vous partagez sa case de cette manière. Si une créature autre que votre cible vous touche sur un jet d'attaque alors que vous partagez la case de votre cible, faites un test nu contre un DD 15. Sur un succès, résolvez l'attaque contre la cible à votre place, en utilisant le même résultat que celui du jet d'attaque qui vous a touché.</p>
