--- a/data/feats/class-12-lPTcPIshChHWz4J6.htm
+++ b/data/feats/class-12-lPTcPIshChHWz4J6.htm
@@ -21,8 +21,8 @@ Avantage: Vos débilitations sont particulièrement efficaces sur vos attaques l
 <p><strong>Prérequis</strong> @Compendium[pf2e.actionspf2e.bp0Up04x3dzGK5bB]{Frappe incapacitante}</p>
 <hr>
 <p>Les handicaps que vous infligez sont particulièrement efficaces quand ils sont associés à vos attaques les plus puissantes. Quand vous obtenez un succès critique à un jet d’attaque contre un ennemi en utilisant Frappe incapacitante, vous ajoutez le handicap suivant à la liste parmi laquelle vous pouvez choisir.</p>
-<p><strong>Handicap :</strong> La cible tente un jet de Vigueur contre votre DD de classe avec les effets suivants.</p>
-<p><strong>Succès critique :</strong> La cible n'est pas affectée.</p>
-<p><strong>Succès :</strong> La cible est @Compendium[pf2e.conditionitems.xYTAsEpcJE1Ccni3]{ralentie} 1 jusqu'à la fin de votre prochain tour.</p>
-<p><strong>Échec :</strong>  La cible est ralentie 2 jusqu’à la fin de votre prochain tour.</p>
-<p><strong>Échec critique :</strong> La cible est @Compendium[pf2e.conditionitems.6uEgoh53GbXuHpTF]{paralysée} jusqu’à la fin de votre prochain tour</p>
+<p><strong>Handicap</strong> La cible tente un jet de Vigueur contre votre DD de classe avec les effets suivants.</p>
+<p><strong>Succès critique</strong> La cible n'est pas affectée.</p>
+<p><strong>Succès</strong> La cible est @Compendium[pf2e.conditionitems.xYTAsEpcJE1Ccni3]{ralentie} 1 jusqu'à la fin de votre prochain tour.</p>
+<p><strong>Échec</strong> La cible est ralentie 2 jusqu’à la fin de votre prochain tour.</p>
+<p><strong>Échec critique</strong> La cible est @Compendium[pf2e.conditionitems.6uEgoh53GbXuHpTF]{paralysée} jusqu’à la fin de votre prochain tour</p>
