révision dons de classe 12

--- a/data/feats/class-12-8cbSVw8RnVzy5USe.htm
+++ b/data/feats/class-12-8cbSVw8RnVzy5USe.htm
@@ -1,19 +1,16 @@
 Name: Enigma's Knowledge
 Nom: Connaissance de l'énigme
 PrereqEN: Assured Knowledge
-PrereqFR: 
-État: changé
-État d'origine: libre
+PrereqFR: Connaissance assurée
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: Your muse whispers knowledge to you at all the right times.
-Avantage: Votre muse vous murmure son savoir au bon moment.
+Avantage: Vous utilisez Savoir automatique avec toute compétence qui vous permet de Vous Souvenir.
 
 ------ Description (en) ------
 <p>Your muse whispers knowledge to you at all the right times.</p>
 <p>You gain the benefits of the @Compendium[pf2e.feats-srd.H3I2X0f7v4EzwxuN]{Automatic Knowledge} skill feat with any skill you can use to @Compendium[pf2e.actionspf2e.1OagaWtBpVXExToo]{Recall Knowledge}. As per the special clause in the Automatic Knowledge feat, you can still only use Automatic Knowledge once per round.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> <a class="entity-link" data-pack="pf2e.feats-srd" data-id="c6CS97Zs0DPmInaI" draggable="true"><i class="fas fa-suitcase"></i>Connaissance assurée</a></p>
-<hr>
 <p>Votre muse vous souffle la connaissance à tous les moments utiles.</p>
-<p>Vous obtenez les avantages du don de compétence <a class="entity-link" data-pack="pf2e.feats-srd" data-id="H3I2X0f7v4EzwxuN" draggable="true"><i class="fas fa-suitcase"></i>savoir automatique</a> avec toute compétence que vous utilisez pour <a class="entity-link" data-pack="pf2e.actionspf2e" data-id="1OagaWtBpVXExToo" draggable="true"><i class="fas fa-suitcase"></i>Vous souvenir</a>. Comme avec la clause spéciale du don Savoir automatique, vous ne pouvez seulement utiliser savoir automatiquee qu'une fois par round.</p>
+<p>Vous obtenez les avantages du don de compétence @Compendium[pf2e.feats-srd.H3I2X0f7v4EzwxuN]{Savoir automatique} avec toute compétence que vous pouvez utiliser pour @Compendium[pf2e.actionspf2e.1OagaWtBpVXExToo]{Vous souvenir}. Comme avec la clause spéciale du don Savoir automatique, vous ne pouvez utiliser savoir automatique qu'une seule fois par round.</p>
