--- a/data/feats/class-12-aFUxNGur3Hma8DKy.htm
+++ b/data/feats/class-12-aFUxNGur3Hma8DKy.htm
@@ -1,20 +1,18 @@
 Name: Predator's Pounce
 Nom: Bond de prédateur
 PrereqEN: animal instinct
-PrereqFR: 
-État: changé
-État d'origine: officielle
+PrereqFR: Instinct animal
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You close the distance to your prey in a blur.
-Avantage: Vous réduisez la distance avec votre proie en un clin d'œil.
+Avantage: Vous Marchez rapidement et faites une Frappe.
 
 ------ Description (en) ------
 <p><strong>Requirements</strong> You are unarmored or wearing light armor</p>
 <hr />
 <p>You close the distance to your prey in a blur, pouncing on the creature before it can react. You Stride up to your Speed and make a Strike at the end of your movement.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> Instinct animal</p>
 <p><strong>Conditions</strong> Vous ne portez pas d’armure ou seulement une armure légère</p>
-<hr>
+<hr />
 <p>Vous vous rapprochez de votre proie à toute vitesse et lui bondissez dessus avant qu’elle puisse réagir. Vous Marchez rapidement en pouvant utiliser la totalité de votre Vitesse et Frappez à la fin de votre déplacement.</p>
