--- a/data/feats/class-12-7HPXQvPH3ovwtVae.htm
+++ b/data/feats/class-12-7HPXQvPH3ovwtVae.htm
@@ -2,18 +2,17 @@ Name: Furious Grab
 Nom: Empoignaded furieuse
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You grab your foe while it’s distracted by your attack.
-Avantage: Vous attrapez votre ennemi pendant qu'il est distrait par votre attaque.
+Avantage: Votre Frappe vous permet de Saisir votre adversaire.
 
 ------ Description (en) ------
 <p><strong>Requirements</strong> Your last action was a successful Strike, and either you have a hand free or your Strike used a grapple weapon.</p>
 <hr />
 <p>You grab your foe while it's distracted by your attack. The foe you hit becomes grabbed, as if you had succeeded at an Athletics check to Grapple the foe.</p>
 ------ Description (fr) ------
-<p><strong>Conditions</strong>  Votre dernière action était une Frappe réussie, et vous avez une main libre ou vous avez Frappé à l’aide d’une arme dotée du trait saisir.</p>
-<hr>
-<p>Vous profitez que votre adversaire est distrait par votre attaque pour l’empoigner. L’adversaire que vous avez frappé devient empoigné, comme si vous aviez réussi un test d’Athlétisme pour le  Saisir.</p>
+<p><strong>Conditions</strong> Votre dernière action était une Frappe réussie et vous avez une main libre ou vous avez Frappé à l’aide d’une arme dotée du trait saisir.</p>
+<hr />
+<p>Vous profitez que votre adversaire est distrait par votre attaque pour l’empoigner. L’adversaire que vous avez Frappé devient Empoigné, comme si vous aviez réussi un test d’Athlétisme pour le Saisir.</p>
