--- a/data/feats/class-12-7sFhBYoz5GSBFNbY.htm
+++ b/data/feats/class-12-7sFhBYoz5GSBFNbY.htm
@@ -1,9 +1,8 @@
 Name: Aura of Faith
 Nom: Aura de foi
 PrereqEN: tenets of good
-PrereqFR: 
-État: changé
-État d'origine: officielle
+PrereqFR: principes du bien
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You radiate an aura of pure belief that imbues your attacks and those of nearby allies with holy power.
@@ -14,6 +13,6 @@ Avantage: Vous rayonnez une aura de croyance pure qui imprègne vos attaques et 
 <p>Your Strikes deal an extra 1 good damage against evil creatures. Also, each good-aligned ally within 15 feet gains this benefit on their first Strike that hits an evil creature each round.</p>
 <p>@Compendium[pf2e.feat-effects.VOOShYoB4gTopZtg]{Effect: Aura of Faith}</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> principes du bien</p>
-<hr>
-<p>Vous émettez une aura de pure croyance qui imprègne de puissance divine vos attaques et celles de vos alliés proches. Vos Frappes infligent 1 dégât bon supplémentaire contre les créatures d’alignement mauvais. De plus, chaque allié d’alignement bon dans un rayon de 4,50 m bénéficie de cet avantage lors de leur première Frappe réussie chaque round contre une créature d’alignement mauvais.</p>
+<p>Vous émettez une aura de pure croyance qui imprègne de puissance divine vos attaques et celles de vos alliés proches.</p>
+<p>Vos Frappes infligent 1 dégât bon supplémentaire contre les créatures d’alignement mauvais. De plus, chaque allié d’alignement bon dans un rayon de 4,50 m bénéficie de cet avantage lors de sa première Frappe réussie chaque round contre une créature d’alignement mauvais.</p>
+<p>@Compendium[pf2e.feat-effects.VOOShYoB4gTopZtg]{Effet: Aura de foi}</p>
