--- a/data/feats/class-12-8INrcMUv5vzWMG3X.htm
+++ b/data/feats/class-12-8INrcMUv5vzWMG3X.htm
@@ -1,21 +1,18 @@
 Name: Sunder Spell
 Nom: Destruction de sort
 PrereqEN: superstition instinct
-PrereqFR: 
-État: changé
-État d'origine: libre
+PrereqFR: Instinct superstitieux
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You draw upon your superstitious fury to destroy a spell.
-Avantage: Tu puises dans ta fureur superstitieuse pour détruire un sort.
+Avantage: Votre Frappe au corps-à-corps peut contrer un sort ou un effet de sort.
 
 ------ Description (en) ------
 <p>You draw upon your superstitious fury to destroy a spell. Make a @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Strike} with a melee weapon or an unarmed attack against a creature, object, or a spell manifestation (such as the wall created by @Compendium[pf2e.spells-srd.IarZrgCeaiUqOuRu]{Wall of Fire} or the guardian from @Compendium[pf2e.spells-srd.jQdm301h6e8hIY4U]{Spiritual Guardian}).</p>
 <p>If your Strike hits, you can attempt to counteract a single spell or magical effect on the target. Your counteract level for this attempt is equal to half your level rounded up, and you use the result of your attack roll for the counteract check.</p>
 <p>Whether or not you succeed at your Strike, the target becomes temporarily immune to your Sunder Spell for 24 hours.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong><a class="entity-link" data-pack="pf2e.classfeatures" data-id="SCYSjUbMmw8JD9P9" draggable="true"><i class="fas fa-suitcase"></i> Instinct superstitieux</a></p>
-<hr>
-<p>Vous tirez de votre propre rage superstitieuse de quoi détruire un sort. Faites une <a class="entity-link" data-pack="pf2e.actionspf2e" data-id="VjxZFuUXrCU94MWR" draggable="true"><i class="fas fa-suitcase"></i>Frappe</a> avec une arme de mêlée ou une attaque à mains nues conter une créature, un objet ou la manifestation d'un sort object (comme un mur créé par <a class="entity-link" data-pack="pf2e.spells-srd" data-id="IarZrgCeaiUqOuRu" draggable="true"><i class="fas fa-suitcase"></i>Mur de feut</a> ou le gardien de <a class="entity-link" data-pack="pf2e.spells-srd" data-id="jQdm301h6e8hIY4U" draggable="true"><i class="fas fa-suitcase"></i>Gardien spirituel</a>).</p>
-<p>Si votre Frappe touche, vous pouvez essayer de contrer un unique sortou effet magique sur la cible. Votre niveau de contre pour cette tentative est égal à ma moitié de votre niveau arrondi au supérieur et vous utilisez le résultat de votre jet d'attaque pour le teste de contresort.</p>
+<p>Vous tirez de votre propre rage superstitieuse de quoi détruire un sort. Faites une @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Frappe} avec une arme au corps-à-corps ou une attaque à mains nues contre une créature, un objet ou la manifestation d'un sort (comme un mur créé par Mur de feu ou le gardien de Gardien spirituel).</p>
+<p>Si votre Frappe touche, vous pouvez essayer de contrer un unique sort ou effet magique sur la cible. Votre niveau de contre pour cette tentative est égal à la moitié de votre niveau arrondi au supérieur et vous utilisez le résultat de votre jet d'attaque pour le test de contresort.</p>
 <p>Que vous réussissiez ou non la Frappe, la cible devient temporairement immunisée à votre Destruction de sort pendant 24 heures.</p>
