--- a/data/feats/class-12-9u0uW1vZThRayXk2.htm
+++ b/data/feats/class-12-9u0uW1vZThRayXk2.htm
@@ -2,16 +2,15 @@ Name: Shaped Contaminant
 Nom: Contaminant formé
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: Through a combination of careful manipulation and precise breath control, you can deploy inhaled toxins precisely.
-Avantage: En combinant une manipulation minutieuse et un contrôle précis de la respiration, vous pouvez déployer les toxines inhalées avec précision.
+Avantage: Vous pouvez déployer des poisons inhalés sur une ligne de 6 m.
 SpoilersEN: Age of Ashes
-SpoilersFR: 
+SpoilersFR: Âge des Cendres
 
 ------ Description (en) ------
 <p>Through a combination of careful manipulation and precise breath control, you can deploy inhaled toxins precisely. When you activate an inhaled poison, you can cause it to fill a 20-foot line that's 5 feet tall rather than a 10-foot cube. You gain a +3 status bonus to saving throws against inhaled poisons that you activate.</p>
 ------ Description (fr) ------
-<p>À travers une combinaison de manipulation soigneuse et de contrôle précis de otre souffle, vous pouvez déployer des toxines inhalées de manière précise. Lorsque vous activez un poison inhalé, vous pouvez faire en sorte qu'il remplisse un ligne de 6 m  d'1,5 m de haut plutôt qu'un cube de 3 m de côté. Vous obtenez un bonus de statut de +3 aux jets de sauvegarde contre les poisons inhalé que vous activez.</p>
+<p>À travers une combinaison de manipulation soigneuse et du contrôle précis de votre respiration, vous pouvez déployer des toxines inhalées de manière précise. Lorsque vous activez un poison inhalé, vous pouvez faire en sorte qu'il remplisse une ligne de 6 m  d'1,5 m de haut plutôt qu'un cube de 3 m de côté. Vous obtenez un bonus de statut de +3 aux jets de sauvegarde contre les poisons inhalés que vous activez.</p>
