--- a/data/feats/class-12-AXy4A7zTYk1JAiOV.htm
+++ b/data/feats/class-12-AXy4A7zTYk1JAiOV.htm
@@ -2,12 +2,11 @@ Name: Magic Sense
 Nom: Sens magique
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You have a literal sixth sense for magic.
-Avantage: Tu as littéralement un sixième sens pour la magie.
+Avantage: Vous Détectez la magie en permanence.
 
 ------ Description (en) ------
 <p>You have a literal sixth sense for ambient magic in your vicinity.</p>
@@ -15,5 +14,5 @@ Avantage: Tu as littéralement un sixième sens pour la magie.
 <p>When you @Compendium[pf2e.actionspf2e.BlAOM2X92SI6HMtJ]{Seek}, you gain the benefits of a 3rd-level <em>detect magic</em> spell on things you see (in addition to the normal benefits of Seeking). You can turn this sense off and on with a free action at the start or the end of your turn.</p>
 ------ Description (fr) ------
 <p>Vous possédez littéralement un sixième sens pour la magie ambiante à proximité de vous.</p>
-<p>Vous pouvez sentir la présence des auras magiques comme si vous utilisiez constamment le sort de niveau 1 @Compendium[pf2e.spells-srd.gpzpAAAJ1Lza2JVl]{Détection de la magie}. cela détecte la magie présente uniquement dans votre champ de vision.</p>
-<p>Lorsque vous @Compendium[pf2e.actionspf2e.BlAOM2X92SI6HMtJ]{Cherchez}, vous obtenez les avantages d'un sort de niveau 3 de <em>détection de la magie</em> sur les choses que vous voyez  (en plus des avantages normaux de Chercher). Vous pouvez mettre un terme à ce sens ou l'activer par une action libre au début ou à la fin de votre tour.</p>
+<p>Vous pouvez sentir la présence des auras magiques comme si vous utilisiez constamment le sort de niveau 1 @Compendium[pf2e.spells-srd.gpzpAAAJ1Lza2JVl]{Détection de la magie}. Cela détecte la magie présente uniquement dans votre champ de vision.</p>
+<p>Lorsque vous @Compendium[pf2e.actionspf2e.BlAOM2X92SI6HMtJ]{Cherchez}, vous obtenez les avantages du de Détection de la magie au niveau 3 sur les choses que vous voyez (en plus des avantages normaux de Chercher). Vous pouvez mettre un terme à ce sens ou l'activer par une action libre au début ou à la fin de votre tour.</p>
