--- a/data/feats/class-12-AYXherMu9gFTyXjp.htm
+++ b/data/feats/class-12-AYXherMu9gFTyXjp.htm
@@ -1,19 +1,16 @@
 Name: Deadly Poison Weapon
 Nom: Arme empoisonnée mortelle
 PrereqEN: Improved Poison Weapon
-PrereqFR: 
-État: changé
-État d'origine: libre
+PrereqFR: Arme empoisonnée améliorée
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: Your poisons are devastatingly potent.
-Avantage: Vos poisons sont d'une puissance dévastatrice.
+Avantage: Arme empoisonnée inflige 4d4 dégâts de poison.
 SpoilersEN: Age of Ashes
-SpoilersFR: 
+SpoilersFR: Âge des Cendres
 
 ------ Description (en) ------
 <p>Your poisons are devastatingly potent. When you apply a simple poison with Poison Weapon, the poison deals [[/r 4d4 #poison]] poison damage instead of [[/r 1d4 #poison]] poison damage. When you apply an injury poison to your weapon, the DC to resist that poison increases by 2, to a maximum of your class DC.</p>
 ------ Description (fr) ------
-<p><span id="ctl00_MainContent_DetailedOutput"><strong>Prérequis</strong> @Compendium[pf2e.feats-srd.9Eufa07qvXG41QmG]{Arme empoisonnée améliorée<br></span></p>
-<hr>
-<p>La puissance de vos poisons est dévastatrice. Lorsque vous appliquez un poison simple avec Arme empoisonnée, le poison inflige 4d4 dégâts de poison au lieu de 1d4 dégâts de poison. Lorsque vous appliquez un poison de blessure sur votre arme, le DD pour résister à ce poison augmente de 2, avec un maximum égal à votre DD de classe.&nbsp;</p>
+<p>La puissance de vos poisons est dévastatrice. Lorsque vous appliquez un poison simple avec Arme empoisonnée, le poison inflige [[/r 4d4 #poison]] dégâts de poison au lieu de [[/r 1d4 #poison]] dégâts de poison. Lorsque vous appliquez un poison de blessure sur votre arme, le DD pour résister à ce poison augmente de 2, avec un maximum égal à votre DD de classe.</p>
