--- a/data/feats/class-12-asRbkgW59DZUpvAq.htm
+++ b/data/feats/class-12-asRbkgW59DZUpvAq.htm
@@ -2,14 +2,13 @@ Name: Extend Elixir
 Nom: Élixir étendu
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: Integrating your own personal energy into the elixirs you create causes them to affect you for longer.
-Avantage: L'intégration de votre énergie personnelle dans les élixirs que vous créez leur permet de vous affecter plus longtemps.
+Avantage: Vous doublez la durée de vos propres élixirs.
 
 ------ Description (en) ------
 <p>Integrating your own personal energy into the elixirs you create causes them to affect you for longer. When you consume one of your alchemical items that has the elixir and infused traits and a duration of 1 minute or longer, that elixir's duration is doubled.</p>
 ------ Description (fr) ------
-<p>La part de votre énergie que vous intégrez dans vos élixirs étend la durée de leurs effets quand vous les buvez. Quand vous consommez l’un de vos objets alchimiques qui possède les traits élixir et imprégné et a une durée supérieure ou égale à 1 min, vous doublez la durée de cet élixir.</p>
+<p>La part de votre énergie que vous intégrez dans vos élixirs étend la durée de leurs effets quand vous les buvez. Quand vous consommez l’un de vos objets alchimiques qui possède les traits élixir et imprégné et a une durée supérieure ou égale à 1 minute, vous doublez la durée de cet élixir.</p>
