révision dons de classe 12

--- a/data/feats/class-01-EOmTf95t03y4IGdp.htm
+++ b/data/feats/class-01-EOmTf95t03y4IGdp.htm
@@ -1,7 +1,7 @@
 Name: Draconic Arrogance
 Nom: Arrogance draconique
 PrereqEN: dragon instinct
-PrereqFR: Instinct du dragon
+PrereqFR: instinct du dragon
 État: libre
 
 ------ Benefits and spoiler ----
