--- a/data/feats/class-06-3uavnVbCsqTvzpgt.htm
+++ b/data/feats/class-06-3uavnVbCsqTvzpgt.htm
@@ -1,7 +1,7 @@
 Name: Dragon's Rage Breath
 Nom: Souffle de rage du dragon
 PrereqEN: dragon instinct
-PrereqFR: Instinct du dragon
+PrereqFR: instinct du dragon
 État: officielle
 
 ------ Benefits and spoiler ----
