--- a/data/feats/class-12-BQrhDpLIp9zjbjEP.htm
+++ b/data/feats/class-12-BQrhDpLIp9zjbjEP.htm
@@ -2,15 +2,13 @@ Name: Distracting Shot
 Nom: Tir déroutant
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: The sheer power of your attacks, or the overwhelming number of them, leaves an enemy flustered.
-Avantage: La puissance pure de vos attaques, ou leur nombre écrasant, laisse l'ennemi désemparé.
------- Benefits and spoiler ----
-Avantage: La puissance pure de vos attaques, ou leur nombre écrasant, laisse l'ennemi désemparé.
+Avantage: Un coup critique avec une Frappe avec une arme à distance Prend la cible au dépourvu.
+
 ------ Description (en) ------
 <p>The sheer power of your attacks, or the overwhelming number of them, leaves an enemy flustered. If you critically hit your hunted prey with a ranged weapon, or hit it at least twice on the same turn with a ranged weapon, it's @Compendium[pf2e.conditionitems.AJh5ex99aV6VTggg]{Flat-Footed} until the start of your next turn.</p>
 ------ Description (fr) ------
-<p>La puissance brute de vos attaques, ou leur accablante profusion, déconcerte votre ennemi. Si vous obtenez un coup critique contre votre proie avec une arme à distance, ou si vous la touchez deux fois lors du même tour avec une arme à distance, elle est prise au dépourvu jusqu’au début de votre prochain tour.</p>
+<p>La puissance brute de vos attaques ou leur accablante profusion, déconcerte votre ennemi. Si vous obtenez un coup critique contre votre proie avec une arme à distance ou si vous la touchez deux fois lors du même tour avec une arme à distance, elle est @Compendium[pf2e.conditionitems.AJh5ex99aV6VTggg]{Prise au dépourvu} jusqu’au début de votre prochain tour.</p>
