--- a/data/feats/class-12-BlfgmJHjDyTVGdPs.htm
+++ b/data/feats/class-12-BlfgmJHjDyTVGdPs.htm
@@ -1,17 +1,14 @@
 Name: Wandering Oasis
 Nom: Oasis itinérante
 PrereqEN: master in Survival
-PrereqFR: 
-État: changé
-État d'origine: libre
+PrereqFR: maître en Survie
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You're surrounded by soothing energy.
-Avantage: Vous êtes entouré d'une énergie apaisante.
+Avantage: Vous protégez vos alliés proches de la chaleur et du froid sévères ou extrèmes.
 
 ------ Description (en) ------
 <p>You're surrounded by soothing energy. You and allies within 60 feet of you are protected from severe environmental heat and cold. If you're legendary in Survival, you and those allies are also protected from extreme environmental heat and cold.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> maître en Survie</p>
-<hr>
 <p>Vous êtes entouré d'énergie apaisante. Vous et vos alliés dans les 18 m êtes protégés de la chaleur et du froid sévère liés à l'environnement. Si vous êtes légendaire en Survie, vous et ces alliés êtes aussi protégés du chaud et du froid extrème liés à l'environnement.</p>
