--- a/data/feats/class-12-COe0bYyVCyC78rzP.htm
+++ b/data/feats/class-12-COe0bYyVCyC78rzP.htm
@@ -2,12 +2,11 @@ Name: Second Sting
 Nom: Second dard
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You read your prey’s movements and transform them into openings, so failures with one weapon set up glancing blows with the other.
-Avantage: Vous lisez les mouvements de votre proie et les transformez en ouvertures, de sorte que les échecs avec une arme entraînent des coups portés avec l'autre.
+Avantage: Une attaque manquée avec une de vos armes vous permet de faire unminimum de dégâts avec l'autre
 
 ------ Description (en) ------
 <p><strong>Requirements</strong> You are wielding two melee weapons, each in a different hand.</p>
@@ -16,6 +15,6 @@ Avantage: Vous lisez les mouvements de votre proie et les transformez en ouvertu
 <p><strong>Failure:</strong> You deal the damage the other required weapon would have dealt on a hit, excluding all damage dice. (This removes dice from weapon runes, spells, and special abilities, not just weapon damage dice).</p>
 ------ Description (fr) ------
 <p><strong>Conditions</strong> Vous maniez deux armes de corps à corps, une dans chaque main</p>
-<hr>
+<hr />
 <p>Vous anticipez les mouvements de votre proie et les ouvertures qu’elle offre pour que vos coups ratés avec une arme permettent des coups superficiels avec l’autre. Faites une Frappe au corps à corps contre votre proie avec l’une des armes requises. Cette Frappe obtient l’effet d’échec suivant.</p>
-<p><strong>Échec:</strong> Votre attaque inflige les dégâts qu’elle devrait normalement infliger en cas de succès, en enlevant tous les dés de dégâts (vous retirez ainsi les dés de dégâts conférés par les runes d’arme, les sorts, les pouvoirs spéciaux, en plus des dés de dégâts de l’arme).</p>
+<p><strong>Échec</strong> Votre attaque inflige les dégâts qu’elle devrait normalement infliger en cas de succès, en enlevant tous les dés de dégâts (vous retirez ainsi les dés de dégâts conférés par les runes d’arme, les sorts, les pouvoirs spéciaux, en plus des dés de dégâts de l’arme).</p>
