--- a/data/feats/class-12-Cy5W8U4yN9P1EvBy.htm
+++ b/data/feats/class-12-Cy5W8U4yN9P1EvBy.htm
@@ -1,19 +1,17 @@
 Name: Amplifying Touch
 Nom: Toucher amplificateur
 PrereqEN: devotion spell (lay on hands)
-PrereqFR: 
-État: changé
-État d'origine: libre
+PrereqFR: sort de dévotion (imposition des mains)
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: Your healing energies empower attacks.
-Avantage: Vos énergies de guérison renforcent les attaques.
+Avantage: Votre Imposition des mains permet à sa cible d'infliger des dégâts bons.
 
 ------ Description (en) ------
 <p>Your healing energies empower attacks.</p>
 <p>An ally that recovers Hit Points from your @Compendium[pf2e.spells-srd.zNN9212H2FGfM7VS]{Lay on Hands} gains a +1 status bonus to their attack rolls and deals 1 additional good damage on all their Strikes until the end of their next turn.</p>
 <p>@Compendium[pf2e.spell-effects.MjtPtndJx31q2N9R]{Spell Effect: Amplifying Touch}</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> sort de dévotion (@Compendium[pf2e.spells-srd.zNN9212H2FGfM7VS]{Imposition des mains})</p>
-<hr>
-<p>Vos énergies curatrices renforce les attaques. Un allié qui récupère des Points de vie de votre <em>imposition des mains</em> obtient un bonus de statut de +1 à leurs jets d'attaque et infligent 1 point de dégât du bien supplémentaire à toutes leurs @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Frappes} jusqu'à la fin de leur prochain tour.</p>
+<p>Vos énergies curatives renforcent les attaques. Un allié qui récupère des Points de vie par votre Imposition des mains obtient un bonus de statut de +1 à leurs jets d'attaque et infligent 1 point de dégât du bien supplémentaire à toutes ses @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Frappes} jusqu'à la fin de leur prochain tour.</p>
+<p>@Compendium[pf2e.spell-effects.MjtPtndJx31q2N9R]{Effet de sort : Toucher amplificateur}</p>
