--- a/data/feats/class-12-D2KSVHPRlBEibrV8.htm
+++ b/data/feats/class-12-D2KSVHPRlBEibrV8.htm
@@ -2,12 +2,11 @@ Name: Cheat Death
 Nom: Trompe la mort
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: Somehow you always escape the reaper by a hair's breadth.
-Avantage: On échappe toujours à la faucheuse d'un cheveu.
+Avantage: Vous évitez de tomber dans l'inconscience mais augmentez votre état Condamné.
 
 ------ Description (en) ------
 <p><strong>Trigger</strong> You take damage that would reduce you to 0 Hit Points.</p>
@@ -16,6 +15,6 @@ Avantage: On échappe toujours à la faucheuse d'un cheveu.
 <p>You can't reduce or ignore the doomed condition from Cheating Death. The doomed condition from Cheating Death lasts for 10 minutes, though this doesn't affect the duration of any other doomed condition you have.</p>
 ------ Description (fr) ------
 <p><strong>Déclencheur</strong> Vous subissez des dégâts qui devraient vous faire passer à 0 Points de vie.</p>
-<hr>
-<p>Vous vous êtes arrangé pour échapper à la faucheuse à un cheveu près. Vous évitez de sombrer dans l'inconscience ou tué et restez à 1 Point de vie, mais vous devenez <a class="entity-link" data-pack="pf2e.conditionitems" data-id="3uh1r86TzbQvosxv" draggable="true"><i class="fas fa-book-open"></i>Condamné</a> 1 (ou augmentez la valeur de Condamné de 1 si vous étiez déjà Condamné).</p>
-<p>Vous ne pouvez réduire ou ignorer la condition Condamné de Trompe la mort. La condition Condamné de Trompe la mort dure pendant 10 minutes, bien que cela n'affecte par la durée de toute autre condition Condamnée que vous possédez.</p>
+<hr />
+<p>Vous vous êtes arrangé pour échapper à la faucheuse à un cheveu près. Vous évitez de sombrer dans l'inconscience ou d'être tué et restez à 1 Point de vie, mais vous devenez @Compendium[pf2e.conditionitems.3uh1r86TzbQvosxv]{Condamné} 1 (ou augmentez la valeur de Condamné de 1 si vous étiez déjà Condamné).</p>
+<p>Vous ne pouvez réduire ou ignorer la condition Condamné de Trompe la mort. La condition Condamné de Trompe la mort dure pendant 10 minutes, bien que cela n'affecte pas la durée de toute autre condition Condamnée que vous possédez.</p>
