--- a/data/feats/class-12-d1jQ0HyIOyUdCCaN.htm
+++ b/data/feats/class-12-d1jQ0HyIOyUdCCaN.htm
@@ -2,12 +2,11 @@ Name: Spring Attack
 Nom: Attaque éclair
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: Springing away from one foe, you Strike at another.
-Avantage: En s'échappant d'un ennemi, vous frappez un autre.
+Avantage: Vous Marchez rapidement et Frappez un ennemi au corps à corps.
 
 ------ Description (en) ------
 <p><strong>Requirements</strong> You are adjacent to an enemy</p>
@@ -15,5 +14,5 @@ Avantage: En s'échappant d'un ennemi, vous frappez un autre.
 <p>Springing away from one foe, you Strike at another. Stride up to your Speed, but you must end that movement within melee reach of a different enemy. At the end of your movement, make a melee Strike against an enemy now within reach. You can use Spring Attack while Burrowing, Climbing, Flying, or Swimming instead of Striding if you have the corresponding movement type.</p>
 ------ Description (fr) ------
 <p><strong>Conditions</strong> Vous êtes adjacent à un ennemi</p>
-<hr>
+<hr />
 <p>Vous vous écartez brusquement d’un ennemi pour en Frapper un autre. Marchez rapidement d’une distance maximale égale à votre Vitesse, mais vous devez terminer ce déplacement à portée de corps à corps d’un ennemi différent. À la fin de votre déplacement, effectuez une Frappe au corps à corps contre un ennemi à présent à portée. Vous pouvez utiliser Attaque éclair pour Creuser, Escalader, Voler ou Nager au lieu de Marcher rapidement si vous possédez le type de déplacement correspondant.</p>
