--- a/data/equipment/consumable-08-5xsfj30uXMKINxnk.htm
+++ b/data/equipment/consumable-08-5xsfj30uXMKINxnk.htm
@@ -1,7 +1,6 @@
 Name: Shrinking Potion (Greater)
 Nom: Potion de rétrécissement (Supérieur)
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>This fungus-flavored potion conveys the effects of the shrink spell to make you and all your gear smaller. This potion has no onset, lasts for 1 hour, and grants the effects of a 4th-level @Compendium[pf2e.spells-srd.PjhUmyKnq6K5uDby]{Shrink} spell. In addition, you gain a +2 item bonus to Stealth checks while shrunken.</p>
