--- a/data/equipment/consumable-04-k6D64EAjcKMf8NZB.htm
+++ b/data/equipment/consumable-04-k6D64EAjcKMf8NZB.htm
@@ -1,7 +1,6 @@
 Name: Bloodseeker Beak
 Nom: Trompe de cherchesang
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>This long, hollow proboscis is harvested from the notorious bloodseeker beast and drips a trickle of blood.</p>
