--- a/data/equipment/consumable-19-xQS1MSqGQz44FWUh.htm
+++ b/data/equipment/consumable-19-xQS1MSqGQz44FWUh.htm
@@ -1,7 +1,6 @@
 Name: Black Lotus Extract
 Nom: Extrait de lotus noir
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>Black lotus extract causes severe internal bleeding.</p>
@@ -14,11 +13,12 @@ Nom: Extrait de lotus noir
 <p><strong>Stage 2</strong> [[/r 17d6#poison]] poison damage and drained 1 (1 round)</p>
 <p><strong>Stage 3</strong> [[/r 20d6#poison]] poison damage and drained 2 (1 round)</p>
 ------ Description (fr) ------
-<p><span>L’extrait de lotus noir provoque de violentes hémorragies internes. <br></span></p>
-<p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span> Interagir (Contact)</p>
+<p>L’extrait de lotus noir provoque de violentes hémorragies internes.</p>
+<hr />
+<p><strong>Activate</strong> <span class="pf2-icon">A</span> Interagir (Contact)</p>
 <p><span><strong>Jet de sauvegarde</strong> Vigueur DD 42  </p>
 <p><strong>Délai</strong>1 minute; </p>
 <p><strong>Durée maximum</strong> 6 rounds; </p>
 <p><strong>Stade 1</strong> [[/r 15d6#poison]] dégâts de poison et @Compendium[pf2e.conditionitems.4D2KBtexWXa6oUMR]{Drainé} 1 (1 round); </p>
-<p><strong>Stade 2</strong> [[/r 17d6#poison]] dégâts de poison et drainé 1 (1 round);</p>
-<p><strong>Stade 3</strong> [[/r 20d6#poison]] dégâts de poison et drainé 2 (1 round)<br></span></p>
+<p><strong>Stade 2</strong> [[/r 17d6#poison]] dégâts de poison et Drainé 1 (1 round);</p>
+<p><strong>Stade 3</strong> [[/r 20d6#poison]] dégâts de poison et Drainé 2 (1 round)</p>
