--- a/data/equipment/equipment-12-FSo4D0bnDeRAURip.htm
+++ b/data/equipment/equipment-12-FSo4D0bnDeRAURip.htm
@@ -1,5 +1,5 @@
 Name: Ring of Stoneshifting
-Nom: Anneau de déplacement terreuse
+Nom: Anneau de déplacement terreux
 État: libre
 
 ------ Description (en) ------
@@ -9,7 +9,7 @@ Nom: Anneau de déplacement terreuse
 <p><strong>Requirements</strong> You are standing on at least 5 feet of earthen material (such as stone, soil, clay, or sand)</p>
 <p><strong>Effect</strong> You sink into the ground and emerge at another location within 100 miles. This location must have an earthen surface at least 5 feet deep and you must be able to identify the location precisely by both its position relative to your starting position and its appearance or other identifying features. You can't carry extradimensional spaces with you to the destination, and if you attempt to do so, the activation fails.</p>
 ------ Description (fr) ------
-<p>Ce simple anneau de fer est facetté d'une géode bulbeuse bordée de cristaux violets brillants. Un Anneau de déplacement des pierres vous confère la capacité d'ignorer les terrains difficiles causés par des gravats ou un sol inégal fait de pierre et de terre.</p>
+<p>Ce simple anneau de fer est incrusté d'une géode bulbeuse bordée de cristaux violets brillants. Un Anneau de déplacement terreux vous confère la capacité d'ignorer les terrains difficiles causés par des gravats ou un sol inégal fait de pierre et de terre.</p>
 <p><strong>Activation</strong> 1 minute</p>
 <p><strong>Fréquence</strong> trois fois par jour</p>
 <p><strong>Exigences</strong> Vous vous tenez debout sur au moins 1,5 mètres de matériau terreux (comme de la pierre, de la terre, de l'argile ou du sable)</p>
