--- a/data/equipment/equipment-18-Wkm2VYPsfGjWBtQe.htm
+++ b/data/equipment/equipment-18-Wkm2VYPsfGjWBtQe.htm
@@ -1,6 +1,6 @@
 Name: Ring of Manical Devices (Greater)
-Nom: 
-État: auto-trad
+Nom: Anneau d'objets déments (supérieur)
+État: libre
 
 ------ Description (en) ------
 <p>This ring seems like simple tarnished brass, but it enhances your curiosity about traps and devices of all kinds.</p>
