--- a/data/equipment/equipment-05-CtAg4DpSssKBIw8R.htm
+++ b/data/equipment/equipment-05-CtAg4DpSssKBIw8R.htm
@@ -1,5 +1,5 @@
 Name: Replacement Filter (Level 5)
-Nom: 
+Nom: Filtre de remplacement (Niveau 5)
 État: auto-trad
 
 ------ Description (en) ------
